--- a/TCP1/html/CangostaDaRuaDasAguas.html
+++ b/TCP1/html/CangostaDaRuaDasAguas.html
@@ -3,14 +3,25 @@
 <h1>Cangosta da Rua das Águas</h1>
 <p>Número: 60</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-60-CangostaDaRuaDasAguas-norte.jpg'/>
 <p>Legenda: Cangosta da Rua das Águas - norte.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p> A numeração que lhe é atribuída pelos índices dá seguimento à da rua das Águas.</p>
+<p>A casa nº37 confronta, de poente, com o nº36 da rua das Águas.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 37 a 42</p>
 <p>Enfiteuta: *Vid.casa nº33 da Rua das Águas (rua 36)</p>
-<p>Descrição:  A numeração que lhe é atribuída pelos índices dá seguimento à da </p>
+<p>Descrição:  
+                    A numeração que lhe é atribuída pelos índices dá seguimento à da rua das Águas.
+                    A casa nº37 confronta, de poente, com o nº36 da rua das Águas.
+                </p>
+
+
+
 </div>
 </body>
 </html>
