--- a/TCP1/html/LouraETerreiroDoCastelo.html
+++ b/TCP1/html/LouraETerreiroDoCastelo.html
@@ -3,27 +3,48 @@
 <h1> Loura e Terreiro do Castelo  </h1>
 <p>Número: 7</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-07-LouraETerreiroDoCastelo.JPG'/>
 <p>Legenda: Loura e Terreiro do Castelo.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>A casa nº 1 confronta, do sul, com casa foreira à confraria de S. João do Souto. </p>
+</div>
+<div>
+<p>A casa nº 1 confronta, do sul, com casa foreira à confraria de S. João do Souto.</p>
+</div>
+<div>
+<p> Antes de 1480 funcionou aqui o "Forno da Vila"</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Manuel Ribeiro Pereira</p>
 <p>Foro: 350 reis</p>
-<p>Descrição: A casa nº 1 confronta, do sul, com casa foreira à </p>
+<p>Descrição: 
+                    A casa nº 1 confronta, do sul, com casa foreira à confraria de S. João do Souto. </p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
 <p>Enfiteuta: Manuel Ribeiro Pereira</p>
 <p>Foro: 100 reis e 1 galinha </p>
-<p>Descrição: A casa nº 1 confronta, do sul, com casa foreira à </p>
+<p>Descrição: A casa nº 1 confronta, do sul, com casa foreira à confraria de S. João do Souto.</p>
+
+
+
 </div>
 <div>
 <p>Número: 3</p>
 <p>Enfiteuta: Dr.António Fernandes do Vale, médico  </p>
 <p>Foro: 100 reis e 4 galinhas</p>
-<p>Descrição:  Antes de </p>
+<p>Descrição:  Antes de 1480 funcionou aqui o "Forno da Vila"
+                </p>
+
+
+
 </div>
 </body>
 </html>
