--- a/TCP1/html/PonteDeGuimaraes.html
+++ b/TCP1/html/PonteDeGuimaraes.html
@@ -3,113 +3,238 @@
 <h1>Ponte de Guimarães</h1>
 <p>Número: 39</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-39-PonteDeGuimaraes-Norte.jpg'/>
 <p>Legenda: Ponte de Guimarães - Norte</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-39-PonteDeGuimaraes-Poente.jpg'/>
 <p>Legenda: Ponte de Guimarães - Poente</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Pertence ao nº 50 da Rua da Ponte de Guimarães, para onde tem frontaria e serventia principais.</p>
+</div>
+<div>
+<p>Paga 60 reis ao enfiteuta do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues.</p>
+</div>
+<div>
+<p>Paga 50 reis ao enfiteuta do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues.</p>
+</div>
+<div>
+<p>Os herdeiros de Diogo Martins, casado com Helena Antónia, pagam 25 reis ao enfiteutaa do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues, conforme o subemprazamento feito em 1631.</p>
+</div>
+<div>
+<p>Paga, ao enfiteuta do prazo de metade do Casal dos Galos foro que foi de Mateus Rodrigues.</p>
+</div>
+<div>
+<p>Paga 80 reis ao enfiteuta do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues.</p>
+</div>
+<div>
+<p>Paga 80 reis ao enfiteuta do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues.</p>
+</div>
+<div>
+<p>Paga 80 reis ao enfiteuta do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues. Confronta, do nascente, com a cangosta que vai para esta casa e para o nº 9.</p>
+</div>
+<div>
+<p>Paga 140 reis ao nº 17 da Rua do Paio Manta e Lages. A casa e quintal confrontam de poente, com a cangosta e serventia que passa entre esta casa e nº 8.</p>
+</div>
+<div>
+<p>Paga 140 reis ao nº 17 da Rua do Paio Manta e Lages</p>
+</div>
+<div>
+<p>Paga 140 reis ao nº 17 da Rua do Paio Manta e Lages</p>
+</div>
+<div>
+<p>Paga 2000 reis ao enfiteuta do prazo da metade do casal e moínhos do Salgueiro, que foi de João Gomes</p>
+</div>
+<div>
+<p>Os herdeiros de Manuel Dias, moleiro, casado com Maria Antónia, subenfiteuta do nº30, pagam por estas 7 casas, 3220 reis e 2 galinhas ao nº 17 da Rua do Paio Manta e Lages, conforme subemprazamento feito no ano de 1606.</p>
+<p>A casa nº28 defronta, do sul, com o Rio Este.</p>
+</div>
+<div>
+<p>Os herdeiros de Gonçalo Ferreira, cirgueiro, casado com Catarina Nogueira, pagam 1750 reis e 4 galinhas ao n° 17 da Rua Paio Manta e Lages. O portal n° 40 é serventia do campo ou quintal da casa nº 35.</p>
+</div>
+<div>
+<p>Os herdeiros de Brás Antunes, carpinteiro, casado com Maria Dias, pagam 367 reis ao nº 17 da Rua Paio Manta e Lages.</p>
+</div>
+<div>
+<p>Os herdeiros de Brás Antunes, carpinteiro, casado com Maria Dias, pagam 367 reis ao n° 17 da Rua Paio Manta e Lages.</p>
+</div>
+<div>
+<p>Os herdeiros de Brás Antunes, carpinteiro, casado com Maria Dias, pagam 367 reis ao nº 17 da Rua Paio Manta e Lages.</p>
+</div>
+<div>
+<p>Os herdeiros de Gonçalo Pires, carpinteiro, pagam 500 reis e 1 galinha ao n° 17 da Rua Paio Manta e Lages.</p>
+</div>
+<div>
+<p>Os herdeiros de Geraldo Dias, carpinteiro, casado com Maria Fernandes, pagam 100 reis ao n° 17 da Rua Paio Manta e Lages.</p>
+</div>
+<div>
+<p>Os herdeiros de Geraldo Dias, carpinteiro, casado com Maria Fernandes, pagam 100 reis ao n° 17 da Rua Paio Manta e Lages.</p>
+<p>Confronta, do sul, com a dita rua.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: João de Magalhães de Araújo Costa, enfiteuta principal do prazo da metade do Casal dos Galos, que foi de Mateus Rodrigues</p>
-<p>Descrição: Pertence ao nº 50 da </p>
+<p>Descrição: Pertence ao nº 50 da Rua da Ponte de Guimarães, para onde tem frontaria e serventia principais.</p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
 <p>Enfiteuta: João de Magalhães de Araújo Costa, enfiteuta principal do prazo da metade do Casal dos Galos, que foi de Mateus Rodrigues</p>
-<p>Descrição: Paga 60 reis ao enfiteuta do prazo de metade do </p>
+<p>Descrição: Paga 60 reis ao enfiteuta do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues.</p>
+
+
+
 </div>
 <div>
 <p>Número: 3</p>
 <p>Enfiteuta: João de Magalhães de Araújo Costa, enfiteuta principal do prazo da metade do Casal dos Galos, que foi de Mateus Rodrigues</p>
-<p>Descrição: Paga 50 reis ao enfiteuta do prazo de metade do </p>
+<p>Descrição: Paga 50 reis ao enfiteuta do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues.</p>
+
+
+
 </div>
 <div>
 <p>Número: 4</p>
 <p>Enfiteuta: João de Magalhães de Araújo Costa, enfiteuta principal do prazo da metade do Casal dos Galos, que foi de Mateus Rodrigues</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: Os herdeiros de Diogo Martins, casado com Helena Antónia, pagam 25 reis ao enfiteutaa do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues, conforme o subemprazamento feito em 1631.</p>
+
+
+
 </div>
 <div>
 <p>Número: 5</p>
 <p>Enfiteuta: João de Magalhães de Araújo Costa, enfiteuta principal do prazo da metade do Casal dos Galos, que foi de Mateus Rodrigues</p>
-<p>Descrição: Paga, ao enfiteuta do prazo de metade do </p>
+<p>Descrição: Paga, ao enfiteuta do prazo de metade do Casal dos Galos foro que foi de Mateus Rodrigues.</p>
+
+
+
 </div>
 <div>
 <p>Número: 6</p>
 <p>Enfiteuta: João de Magalhães de Araújo Costa, enfiteuta principal do prazo da metade do Casal dos Galos, que foi de Mateus Rodrigues</p>
-<p>Descrição: Paga 80 reis ao enfiteuta do prazo de metade do </p>
+<p>Descrição: Paga 80 reis ao enfiteuta do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues.</p>
+
+
+
 </div>
 <div>
 <p>Número: 7</p>
 <p>Enfiteuta: João de Magalhães de Araújo Costa, enfiteuta principal do prazo da metade do Casal dos Galos, que foi de Mateus Rodrigues</p>
-<p>Descrição: Paga 80 reis ao enfiteuta do prazo de metade do </p>
+<p>Descrição: Paga 80 reis ao enfiteuta do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues.</p>
+
+
+
 </div>
 <div>
 <p>Número: 8</p>
 <p>Enfiteuta: João de Magalhães de Araújo Costa, enfiteuta principal do prazo da metade do Casal dos Galos, que foi de Mateus Rodrigues</p>
-<p>Descrição: Paga 80 reis ao enfiteuta do prazo de metade do </p>
+<p>Descrição: Paga 80 reis ao enfiteuta do prazo de metade do Casal dos Galos que foi de Mateus Rodrigues. Confronta, do nascente, com a cangosta que vai para esta casa e para o nº 9.</p>
+
+
+
 </div>
 <div>
 <p>Número: 9</p>
 <p>Enfiteuta: Pedro da Cunha Sottomayor, Alcaide Mor de Braga</p>
-<p>Descrição: Paga 140 reis ao nº 17 da </p>
+<p>Descrição: Paga 140 reis ao nº 17 da Rua do Paio Manta e Lages. A casa e quintal confrontam de poente, com a cangosta e serventia que passa entre esta casa e nº 8.</p>
+
+
+
 </div>
 <div>
 <p>Número: 10</p>
 <p>Enfiteuta: Pedro da Cunha Sottomayor, Alcaide Mor de Braga</p>
-<p>Descrição: Paga 140 reis ao nº 17 da </p>
+<p>Descrição: Paga 140 reis ao nº 17 da Rua do Paio Manta e Lages</p>
+
+
+
 </div>
 <div>
 <p>Número: 11</p>
 <p>Enfiteuta: Pedro da Cunha Sottomayor, Alcaide Mor de Braga</p>
-<p>Descrição: Paga 140 reis ao nº 17 da </p>
+<p>Descrição: Paga 140 reis ao nº 17 da Rua do Paio Manta e Lages</p>
+
+
+
 </div>
 <div>
 <p>Número: 27</p>
 <p>Enfiteuta: João Gomes, casado com Mariana Gomes, enfiteuta principal do prazo da metade do Casal e moinhos do Salgueiro, que foi de João Gomes</p>
-<p>Descrição: Paga 2000 reis ao enfiteuta do prazo da metade do </p>
+<p>Descrição: Paga 2000 reis ao enfiteuta do prazo da metade do casal e moínhos do Salgueiro, que foi de João Gomes</p>
+
+
+
 </div>
 <div>
 <p>Número: 28 a 34</p>
 <p>Enfiteuta: Pedro da Cunha Sottomayor, Alcaide Mor de Braga</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: Os herdeiros de Manuel Dias, moleiro, casado com Maria Antónia, subenfiteuta do nº30, pagam por estas 7 casas, 3220 reis e 2 galinhas ao nº 17 da Rua do Paio Manta e Lages, conforme subemprazamento feito no ano de 1606.
+                A casa nº28 defronta, do sul, com o Rio Este.</p>
+
+
+
 </div>
 <div>
 <p>Número: 35 a 40</p>
 <p>Enfiteuta: Pedro da Cunha Sottomayor, Alcaide Mor de Braga</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: Os herdeiros de Gonçalo Ferreira, cirgueiro, casado com Catarina Nogueira, pagam 1750 reis e 4 galinhas ao n° 17 da Rua Paio Manta e Lages. O portal n° 40 é serventia do campo ou quintal da casa nº 35.</p>
+
+
+
 </div>
 <div>
 <p>Número: 41</p>
 <p>Enfiteuta: Pedro da Cunha Sottomayor, Alcaide Mor de Braga</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: Os herdeiros de Brás Antunes, carpinteiro, casado com Maria Dias, pagam 367 reis ao nº 17 da Rua Paio Manta e Lages.</p>
+
+
+
 </div>
 <div>
 <p>Número: 42</p>
 <p>Enfiteuta: Pedro da Cunha Sottomayor, Alcaide Mor de Braga</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: Os herdeiros de Brás Antunes, carpinteiro, casado com Maria Dias, pagam 367 reis ao n° 17 da Rua Paio Manta e Lages.</p>
+
+
+
 </div>
 <div>
 <p>Número: 43</p>
 <p>Enfiteuta: Pedro da Cunha Sottomayor, Alcaide Mor de Braga</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: Os herdeiros de Brás Antunes, carpinteiro, casado com Maria Dias, pagam 367 reis ao nº 17 da Rua Paio Manta e Lages.</p>
+
+
+
 </div>
 <div>
 <p>Número: 44</p>
 <p>Enfiteuta: Pedro da Cunha Sottomayor, Alcaide Mor de Braga</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: Os herdeiros de Gonçalo Pires, carpinteiro, pagam 500 reis e 1 galinha ao n° 17 da Rua Paio Manta e Lages.</p>
+
+
+
 </div>
 <div>
 <p>Número: 45</p>
 <p>Enfiteuta: Pedro da Cunha Sottomayor, Alcaide Mor de Braga</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: Os herdeiros de Geraldo Dias, carpinteiro, casado com Maria Fernandes, pagam 100 reis ao n° 17 da Rua Paio Manta e Lages.</p>
+
+
+
 </div>
 <div>
 <p>Número: 46</p>
 <p>Enfiteuta: Pedro da Cunha Sottomayor, Alcaide Mor de Braga</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: Os herdeiros de Geraldo Dias, carpinteiro, casado com Maria Fernandes, pagam 100 reis ao n° 17 da Rua Paio Manta e Lages.
+                    Confronta, do sul, com a dita rua.</p>
+
+
+
 </div>
 </body>
 </html>
