--- a/TCP1/html/PracaDoPao.html
+++ b/TCP1/html/PracaDoPao.html
@@ -3,19 +3,52 @@
 <h1>Praça do Pão</h1>
 <p>Número: 4</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-04-PracaDoPao-norte.PNG'/>
 <p>Legenda: Praça do Pão - vista norte.</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-04-PracaDoPao-sul.PNG'/>
 <p>Legenda: Praça do Pão - vista sul.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Confronta, de nascente, com a Rua do Poço.</p>
+</div>
+<div>
+</div>
+<div>
+<p>As casas nº 5 e 6, passaram a constituir um único prazo, em 1702. Em 1789, o nº 4 foi também integrado no mesmo prazo.</p>
+</div>
+<div>
+<p>As casas nº 5 e 6, passaram a constituir um único prazo, em 1702. Em 1789, o nº 4 foi também integrado no mesmo prazo.</p>
+</div>
+<div>
+<p>O enfiteuta sucedeu a seu pai, Francisco de Araújo, o qual era filho de José de Araújo, barbeiro, e de sua mulher Ana Maria.</p>
+</div>
+<div>
+<p>O enfiteuta sucedeu a seu pai, Francisco de Araújo, o qual era filho de José de Araújo, barbeiro, e de sua mulher Ana Maria.</p>
+</div>
+<div>
+<p>Esta casa possui frontaria para a Rua de D. Gualdim. Igual pensão é paga ao Hospital de S. Marcos.</p>
+</div>
+<div>
+<p>A parte do poente é foreira ao Hospital de S. Marcos.</p>
+</div>
+<div>
+<p>Encontram-se unidas num único prazo desde o ano de 1660.</p>
+</div>
+<div>
+<p>No ano de 1660 foi incorporado neste prazo uma torre pertencente ao nº 16, e, no ano de 1724, um quintal do nº 2 da Rua dos Açougues Velhos.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Maria Barbosa, viúva de Manuel Fernandes, alfaiate do Campo de S. Sebastião</p>
 <p>Foro: 370 reis e 2 galinhas</p>
-<p>Descrição: Confronta, de nascente, com a </p>
+<p>Descrição: Confronta, de nascente, com a Rua do Poço.</p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
@@ -31,13 +64,19 @@
 <p>Número: 4</p>
 <p>Enfiteuta: D. Paula Francisca de Melo, viúva de Francisco da Rocha Tinoco</p>
 <p>Foro: 620 reis e 2 galinhas</p>
-<p>Descrição: As casas nº 5 e 6, passaram a constituir um único prazo, em </p>
+<p>Descrição: As casas nº 5 e 6, passaram a constituir um único prazo, em 1702. Em 1789, o nº 4 foi também integrado no mesmo prazo.</p>
+
+
+
 </div>
 <div>
 <p>Número: 5 e 6</p>
 <p>Enfiteuta: D. Paula Francisca de Melo, viúva de Francisco da Rocha Tinoco</p>
 <p>Foro: 825 reis e 2 galinhas</p>
-<p>Descrição: As casas nº 5 e 6, passaram a constituir um único prazo, em </p>
+<p>Descrição: As casas nº 5 e 6, passaram a constituir um único prazo, em 1702. Em 1789, o nº 4 foi também integrado no mesmo prazo.</p>
+
+
+
 </div>
 <div>
 <p>Número: 7</p>
@@ -48,13 +87,19 @@
 <p>Número: 8</p>
 <p>Enfiteuta: Dr. José de Araújo</p>
 <p>Foro: 730 reis e 2 galinhas</p>
-<p>Descrição: O enfiteuta sucedeu a seu pai, </p>
+<p>Descrição: O enfiteuta sucedeu a seu pai, Francisco de Araújo, o qual era filho de José de Araújo, barbeiro, e de sua mulher Ana Maria.</p>
+
+
+
 </div>
 <div>
 <p>Número: 9</p>
 <p>Enfiteuta: Dr. José de Araújo</p>
 <p>Foro: 520 reis e 2 galinhas</p>
-<p>Descrição: O enfiteuta sucedeu a seu pai, </p>
+<p>Descrição: O enfiteuta sucedeu a seu pai, Francisco de Araújo, o qual era filho de José de Araújo, barbeiro, e de sua mulher Ana Maria.</p>
+
+
+
 </div>
 <div>
 <p>Número: 10</p>
@@ -65,25 +110,37 @@
 <p>Número: 11</p>
 <p>Enfiteuta: D. Teresa Maria Ferreira Santarém</p>
 <p>Foro: 150 reis</p>
-<p>Descrição: Esta casa possui frontaria para a </p>
+<p>Descrição: Esta casa possui frontaria para a Rua de D. Gualdim. Igual pensão é paga ao Hospital de S. Marcos.</p>
+
+
+
 </div>
 <div>
 <p>Número: 12</p>
 <p>Enfiteuta: João Francisco, tratante</p>
 <p>Foro: 550 reis e 2 galinhas</p>
-<p>Descrição: A parte do poente é foreira ao </p>
+<p>Descrição: A parte do poente é foreira ao Hospital de S. Marcos.</p>
+
+
+
 </div>
 <div>
 <p>Número: 13 e 14</p>
 <p>Enfiteuta: Dr. António da Costa</p>
 <p>Foro: 1800 reis, 2 capões e 2 galinhas</p>
-<p>Descrição: Encontram-se unidas num único prazo desde o ano de </p>
+<p>Descrição: Encontram-se unidas num único prazo desde o ano de 1660.</p>
+
+
+
 </div>
 <div>
 <p>Número: 15</p>
 <p>Enfiteuta: Rev. Francisco da Costa, Abade de Tadim</p>
 <p>Foro: 1010 reis e 4 galinhas</p>
-<p>Descrição: No ano de </p>
+<p>Descrição: No ano de 1660 foi incorporado neste prazo uma torre pertencente ao nº 16, e, no ano de 1724, um quintal do nº 2 da Rua dos Açougues Velhos.</p>
+
+
+
 </div>
 <div>
 <p>Número: 16</p>
