--- a/TCP1/html/RuaDaVielinha.html
+++ b/TCP1/html/RuaDaVielinha.html
@@ -3,42 +3,113 @@
 <h1>Rua da Vielinha</h1>
 <p>Número: 24</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-24-RuaDaVielinha-nascente.jpg'/>
 <p>Legenda: Rua da Vielinha - nascente.</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-24-RuaDaVielinha-poente.jpg'/>
 <p>Legenda: Rua da Vielinha - poente.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Foi pertença do n.º 15 da Rua dos Sapateiros.</p>
+</div>
+<div>
+<p>Esta casa pertence à obra da Sé, a quem os herdeiros de Domingos de Araújo, caminheiro, e sua mulher,
+                            Catarina Gonçalves, lhe pagam de foro
+                        80 reis. Esteve integrada no prazo de uma casa da
+                        Rua dos Sapateiros.</p>
+</div>
+<div>
+<p>Pertenceu ao n.º 15 da Rua dos Sapateiros.</p>
+</div>
+<div>
+<p>Encontra-se subemprazada aos herdeiros de Manuel
+                            Coelho de Araújo, tratante, e sua mulher, Maria da Costa. Faz parte do prazo da casa n.º
+                        12, da Rua dos Sapateiros, à qual paga de foro 2000
+                        reis.</p>
+<p>Corresponde a duas casas pequenas, situadas na «agiela» da
+                        Rua da Vielinha, da parte norte.</p>
+</div>
+<div>
+<p>Corresponde ao n.º 13 da Rua dos Sapateiros.</p>
+<p>Confronta, do norte, com a agiela da Rua da Vielinha e, do
+                        sul, com parte da casa n.º 18 da Rua de Maximinos.</p>
+</div>
+<div>
+<p>Corresponde ao n.º 18 da Rua de Maximinos, para onde tem a
+                        frontaria e serventia principais.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Os herdeiros de Filipa Francisca, mulher de Francisco de Freitas</p>
 <p>Foro: 20 reis</p>
-<p>Descrição: Foi pertença do n.º 15 da </p>
+<p>Descrição: 
+                    Foi pertença do n.º 15 da Rua dos Sapateiros.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
-<p>Descrição: Esta casa pertence à obra da Sé, a quem os herdeiros de </p>
+<p>Descrição: 
+                    Esta casa pertence à obra da Sé, a quem os herdeiros de Domingos de Araújo, caminheiro, e sua mulher,
+                            Catarina Gonçalves, lhe pagam de foro
+                        80 reis. Esteve integrada no prazo de uma casa da
+                        Rua dos Sapateiros.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 3</p>
 <p>Enfiteuta: Manuel da Silva, padeiro</p>
 <p>Foro: 10 reis e 1 galinha</p>
-<p>Descrição: Pertenceu ao n.º 15 da </p>
+<p>Descrição: 
+                    Pertenceu ao n.º 15 da Rua dos Sapateiros.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 4</p>
 <p>Enfiteuta: Vid. casa n.º 12, da Rua dos Sapateiros (rua n.º 23).</p>
-<p>Descrição: Encontra-se subemprazada aos herdeiros de </p>
+<p>Descrição: 
+                    Encontra-se subemprazada aos herdeiros de Manuel
+                            Coelho de Araújo, tratante, e sua mulher, Maria da Costa. Faz parte do prazo da casa n.º
+                        12, da Rua dos Sapateiros, à qual paga de foro 2000
+                        reis.
+                    Corresponde a duas casas pequenas, situadas na «agiela» da
+                        Rua da Vielinha, da parte norte.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 5</p>
-<p>Descrição: Corresponde ao n.º 13 da </p>
+<p>Descrição: 
+                    Corresponde ao n.º 13 da Rua dos Sapateiros.
+                    Confronta, do norte, com a agiela da Rua da Vielinha e, do
+                        sul, com parte da casa n.º 18 da Rua de Maximinos.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 6</p>
-<p>Descrição: Corresponde ao n.º 18 da </p>
+<p>Descrição: 
+                    Corresponde ao n.º 18 da Rua de Maximinos, para onde tem a
+                        frontaria e serventia principais.
+                </p>
+
+
+
 </div>
 </body>
 </html>
