--- a/TCP1/html/RuaDasOucias.html
+++ b/TCP1/html/RuaDasOucias.html
@@ -3,81 +3,171 @@
 <h1>Rua das Oucias</h1>
 <p>Número: 5</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-05-RuaDasOucias.png'/>
 <p>Legenda: Rua das Oucias.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>A casa é foreira aos Padres coreiros. O censo é pago por Domingos José de Melo.</p>
+</div>
+<div>
+<p>Corresponde ao nº1 da Rua de S.João, para onde tem a frontaria e serventia principais.</p>
+</div>
+<div>
+<p>Corresponde ao nº 11 da Rua de S. João, para onde tem a frontaria e serventia principais. 
+            </p>
+</div>
+<div>
+<p>Confronta, do nascente, com casa de herdade dízima a Deus. Foi unida, em 1621, à casa nº 6.</p>
+</div>
+<div>
+<p>Confronta, do nascente, com casa de herdade dízima a Deus. Foi unida, em 1621, à casa nº 6.</p>
+</div>
+<div>
+<p>Confronta, do poente, com o Terreiro das Oussias. António Xavier Rebelo, tercenário, paga de censo 160 reis.    </p>
+</div>
+<div>
+<p>O enfiteuta possuia esta casa por sucessão de Frutuoso Brandão Pereira e de Maria Josefa da Costa, sua mulher. Confronta, do sul, com o nº 2 da Rua Pequena.</p>
+</div>
+<div>
+<p>Confronta, do norte, com o Terreiro das Oussias; do sul, com o nº 8, da Rua Pequena; do nascente, com a mesma Rua Pequena e, 
+                    do poente, com quintal de uma casa da Rua de Sta. Maria ou do Poço. </p>
+<p>Foi demolida, depois do ano de 1750, "para a obra da sacristia da Sé,
+                    por conta da fábrica da mesma Sé".</p>
+</div>
+<div>
+<p> Não aparecem desenhadas no Mapa por terem sido demolidas "para a obra da sacristia da Sé". A casa nº 10 situava-se no canto desta rua (parte nascente) e confrontava do norte, defronte da Sé, com a Rua das Oussias e, do nascente com o caminho que se dirigia das Oussias para a Rua Pequena. A casa nº 11 confronta, do nascente, com a nº 10. </p>
+</div>
+<div>
+<p> Foi comprada pela Fábrica da Sé que a mandou demolir depois de 1750, para a "obra da sacristia".</p>
+<p>Confronta, do nascente, com o Terreiro das Oussias e, do norte com o mesmo Terreiro e com o nº 13.</p>
+</div>
+<div>
+<p>A enfiteuta sucedeu a seu irmão, o Reitor de Freitas,José Ferreira Petiz,  sendo ambos filhos de Francisco Gonçalves Petiz, pasteleiro.</p>
+<p> Confronta, do nascente, com o nº 14; do norte e poente com a rua e, do sul com a nº 12.</p>
+</div>
+<div>
+<p> Confronta, do nascente, com o nº 13 e, do poente com o nº 15.</p>
+<p> Foi construída em 1547, em pertenças da casa nº 13.</p>
+</div>
+<div>
+<p>A casa nº16 foi unida ao nº17, no ano de 1667 . O nº17 confronta com a Rua do Poço .
+                </p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: None</p>
 <p>Foro: 38 reis e 6 pretos (de censo)</p>
-<p>Descrição: A casa é foreira aos Padres coreiros. O censo é pago por </p>
+<p>Descrição: 
+                    A casa é foreira aos Padres coreiros. O censo é pago por Domingos José de Melo.</p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
 <p>Enfiteuta: None</p>
 <p>Foro: None</p>
-<p>Descrição: Corresponde ao nº1 da </p>
+<p>Descrição: Corresponde ao nº1 da Rua de S.João, para onde tem a frontaria e serventia principais.</p>
+
+
+
 </div>
 <div>
 <p>Número: 3 e 4</p>
 <p>Enfiteuta: None</p>
 <p>Foro: None</p>
-<p>Descrição: Corresponde ao nº 11 da </p>
+<p>Descrição: Corresponde ao nº 11 da Rua de S. João, para onde tem a frontaria e serventia principais. 
+            
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 5</p>
 <p>Enfiteuta: Custódio Rodrigues, boticário </p>
 <p>Foro:  440 reis e 2 galinhas</p>
-<p>Descrição: Confronta, do nascente, com </p>
+<p>Descrição: Confronta, do nascente, com casa de herdade dízima a Deus. Foi unida, em 1621, à casa nº 6.</p>
+
+
+
 </div>
 <div>
 <p>Número: 6</p>
 <p>Enfiteuta: Custódio Rodrigues, boticário</p>
 <p>Foro: 345 reis e 2 galinhas</p>
-<p>Descrição: Confronta, do nascente, com casa de herdade dízima a Deus. Foi unida, em </p>
+<p>Descrição: Confronta, do nascente, com casa de herdade dízima a Deus. Foi unida, em 1621, à casa nº 6.</p>
+
+
+
 </div>
 <div>
 <p>Número: 7</p>
 <p>Enfiteuta: None</p>
 <p>Foro: 160 reis (de censo)</p>
-<p>Descrição: Confronta, do poente, com o </p>
+<p>Descrição: Confronta, do poente, com o Terreiro das Oussias. António Xavier Rebelo, tercenário, paga de censo 160 reis.    </p>
+
+
+
 </div>
 <div>
 <p>Número: 8</p>
 <p>Enfiteuta:  Dr. Manuel José Brandão</p>
 <p>Foro: 700 reis e 2 galinhas</p>
-<p>Descrição: O enfiteuta possuia esta casa por sucessão de </p>
+<p>Descrição: O enfiteuta possuia esta casa por sucessão de Frutuoso Brandão Pereira e de Maria Josefa da Costa, sua mulher. Confronta, do sul, com o nº 2 da Rua Pequena.</p>
+
+
+
 </div>
 <div>
 <p>Número: 9</p>
 <p>Enfiteuta: None</p>
 <p>Foro: None</p>
-<p>Descrição: Confronta, do norte, com o </p>
+<p>Descrição: Confronta, do norte, com o Terreiro das Oussias; do sul, com o nº 8, da Rua Pequena; do nascente, com a mesma Rua Pequena e, 
+                    do poente, com quintal de uma casa da Rua de Sta. Maria ou do Poço. 
+                    Foi demolida, depois do ano de 1750, "para a obra da sacristia da Sé,
+                    por conta da fábrica da mesma Sé".</p>
+
+
+
 </div>
 <div>
 <p>Número: 10 e 11</p>
 <p>Enfiteuta: None</p>
 <p>Foro: None</p>
-<p>Descrição:  Não aparecem desenhadas no Mapa por terem sido demolidas "para a obra da </p>
+<p>Descrição:  Não aparecem desenhadas no Mapa por terem sido demolidas "para a obra da sacristia da Sé". A casa nº 10 situava-se no canto desta rua (parte nascente) e confrontava do norte, defronte da Sé, com a Rua das Oussias e, do nascente com o caminho que se dirigia das Oussias para a Rua Pequena. A casa nº 11 confronta, do nascente, com a nº 10. </p>
+
+
+
 </div>
 <div>
 <p>Número: 12</p>
 <p>Enfiteuta: Custódia Pereira, mulher de João Fernandes Gentil</p>
 <p>Foro: 550 reis, 2 galinhas e 2 capões</p>
-<p>Descrição:  Foi comprada pela </p>
+<p>Descrição:  Foi comprada pela Fábrica da Sé que a mandou demolir depois de 1750, para a "obra da sacristia".Confronta, do nascente, com o Terreiro das Oussias e, do norte com o mesmo Terreiro e com o nº 13.</p>
+
+
+
 </div>
 <div>
 <p>Número: 13</p>
 <p>Enfiteuta: Francisca Teresa</p>
 <p>Foro: 400 reis e 2 galinhas</p>
-<p>Descrição: A enfiteuta sucedeu a seu irmão, o Reitor de Freitas,</p>
+<p>Descrição: A enfiteuta sucedeu a seu irmão, o Reitor de Freitas,José Ferreira Petiz,  sendo ambos filhos de Francisco Gonçalves Petiz, pasteleiro. Confronta, do nascente, com o nº 14; do norte e poente com a rua e, do sul com a nº 12.</p>
+
+
+
 </div>
 <div>
 <p>Número: 14</p>
 <p>Enfiteuta: Francisca Teresa</p>
 <p>Foro: 400 reis e 2 galinhas</p>
-<p>Descrição:  Confronta, do nascente, com o nº 13 e, do poente com o nº 15.</p>
+<p>Descrição:  Confronta, do nascente, com o nº 13 e, do poente com o nº 15. Foi construída em 1547, em pertenças da casa nº 13.</p>
+
+
+
 </div>
 <div>
 <p>Número: 15</p>
@@ -88,7 +178,11 @@
 <p>Número: 16 e 17</p>
 <p>Enfiteuta: David Lopes</p>
 <p>Foro: 820 reis e 2 galinhas</p>
-<p>Descrição: A casa nº16 foi unida ao nº17, no ano de </p>
+<p>Descrição: A casa nº16 foi unida ao nº17, no ano de 1667 . O nº17 confronta com a Rua do Poço .
+                </p>
+
+
+
 </div>
 </body>
 </html>
