--- a/TCP1/html/RuaDeNossaSenhoraDeGuadalupe.html
+++ b/TCP1/html/RuaDeNossaSenhoraDeGuadalupe.html
@@ -3,53 +3,168 @@
 <h1>Rua de Nossa Senhora de Guadalupe</h1>
 <p>Número: 50</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-50-RuaDeNossaSenhoraDeGuadalupe-a.jpg'/>
 <p>Legenda: Rua de Nossa Senhora de Guadalupe - Vista norte.</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-50-RuaDeNossaSenhoraDeGuadalupe-b.jpg'/>
 <p>Legenda: Rua de Nossa Senhora de Guadalupe - Vista sul</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>«Chãos de casas» do prazo do casal dos Chãos ou Quinteiro. 
+                        O chão n.º 1 confronta, do poente, com o chão n.° 26 da Praça do Gavião.</p>
+</div>
+<div>
+<p>Pertencem ao casal dos Chãos ou Quinteiro. 
+                        Nos livros dos prazos do cabido não se 
+                        encontram escrituras de subemprazamento.</p>
+</div>
+<div>
+<p>Ursula Vieira, e suas irmãs, Vitoriana Josefa e 
+                        Joana Antónia, pagam 1200 reis ao enfiteuta do 
+                        prazo do casal dos Chãos ou Quinteiro, à face 
+                        do qual foi subemprazada em 1745.</p>
+</div>
+<div>
+<p>António Gomes, pedreiro, casado com Ana Gomes, 
+                        paga 1200 reis ao enfiteuta do prazo do 
+                        casal dos Chãos ou Quinteiro, à face do qual 
+                        foi subemprazado em 1725.</p>
+</div>
+<div>
+<p>Luís Cardoso Coutinho de Oliveira, casado com 
+                        Antónia José Leonor de Vasconcelos, paga 
+                        7800 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1740.</p>
+<p>Ao prazo pertencem, ainda, os n.° 1 a 6 da 
+                        rua em frente de N. Sra. de Guadalupe.</p>
+<p>Os n.° 9 e 10, encontram-se unidos desde o 
+                        ano de 1725.</p>
+<p>À face da escritura do ano de 1740 foram feitos 
+                        títulos subalternos das casas n.° 14, 15, 16 e 17.</p>
+</div>
+<div>
+<p>«Chãos de casas» do prazo do casal dos Chãos ou Quinteiro. 
+                        O chão n.° 18 confronta, do 
+                        nascente, com a rua em frente de N. Sra. de Guadalupe.</p>
+</div>
+<div>
+<p>Pertencem ao casal dos Chãos ou Quinteiro, a 
+                        cujo enfiteuta se paga foro. Nos livros dos 
+                        prazos do cabido não se encontram escrituras de 
+                        subemprazamento.</p>
+</div>
+<div>
+<p>«Chãos de casa» do prazo do casal dos Chãos ou Quinteiro. 
+                        O n.° 35 confronta, do poente, 
+                        com o n.° 27 da Praça do Gavião.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1 e 2</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: «Chãos de casas» do prazo do </p>
+<p>Descrição: 
+                    «Chãos de casas» do prazo do casal dos Chãos ou Quinteiro. 
+                        O chão n.º 1 confronta, do poente, com o chão n.° 26 da Praça do Gavião.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 3, 4, 5 e 6</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: Pertencem ao </p>
+<p>Descrição: 
+                    Pertencem ao casal dos Chãos ou Quinteiro. 
+                        Nos livros dos prazos do cabido não se 
+                        encontram escrituras de subemprazamento.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 7</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Ursula Vieira, e suas irmãs, Vitoriana Josefa e 
+                        Joana Antónia, pagam 1200 reis ao enfiteuta do 
+                        prazo do casal dos Chãos ou Quinteiro, à face 
+                        do qual foi subemprazada em 1745.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 8</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    António Gomes, pedreiro, casado com Ana Gomes, 
+                        paga 1200 reis ao enfiteuta do prazo do 
+                        casal dos Chãos ou Quinteiro, à face do qual 
+                        foi subemprazado em 1725.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 9 a 17</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Luís Cardoso Coutinho de Oliveira, casado com 
+                        Antónia José Leonor de Vasconcelos, paga 
+                        7800 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1740.
+                    Ao prazo pertencem, ainda, os n.° 1 a 6 da 
+                        rua em frente de N. Sra. de Guadalupe.    
+                    Os n.° 9 e 10, encontram-se unidos desde o 
+                        ano de 1725.
+                    À face da escritura do ano de 1740 foram feitos 
+                        títulos subalternos das casas n.° 14, 15, 16 e 17.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 18 a 27</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: «Chãos de casas» do prazo do </p>
+<p>Descrição: 
+                    «Chãos de casas» do prazo do casal dos Chãos ou Quinteiro. 
+                        O chão n.° 18 confronta, do 
+                        nascente, com a rua em frente de N. Sra. de Guadalupe.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 28 e 29</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: Pertencem ao </p>
+<p>Descrição: 
+                    Pertencem ao casal dos Chãos ou Quinteiro, a 
+                        cujo enfiteuta se paga foro. Nos livros dos 
+                        prazos do cabido não se encontram escrituras de 
+                        subemprazamento.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 30 a 35</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: «Chãos de casa» do prazo do </p>
+<p>Descrição: 
+                    «Chãos de casa» do prazo do casal dos Chãos ou Quinteiro. 
+                        O n.° 35 confronta, do poente, 
+                        com o n.° 27 da Praça do Gavião.
+                </p>
+
+
+
 </div>
 </body>
 </html>
