--- a/TCP1/html/RuaDeSJoao.html
+++ b/TCP1/html/RuaDeSJoao.html
@@ -3,13 +3,14 @@
 <h1>Rua de S.João</h1>
 <p>Número: 9</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-9-RuaDeSJoao-Norte.jpg'/>
 <p>Legenda: Rua de S.João - vista norte. </p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-9-RuaDeSJoao-Sul.jpg'/>
 <p>Legenda: Rua de S.João - vista sul. </p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<h3>Casas:</h3>
 </body>
 </html>
