--- a/TCP1/html/RuaDireita.html
+++ b/TCP1/html/RuaDireita.html
@@ -3,21 +3,32 @@
 <h1>Rua Direita</h1>
 <p>Número: 28</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-28-RuaDireita-Poente.png'/>
 <p>Legenda: Rua Direita - poente</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-28-RuaDireita-Nascente.png'/>
 <p>Legenda:  Rua Direita - nascente</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>
+                        Não tem casas foreiras ao cabido.
+                    </p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: -</p>
 <p>Enfiteuta: -</p>
 <p>Foro: -</p>
 <p>Descrição: 
+                    
                         Não tem casas foreiras ao cabido.
-                    </p>
+                    
+                </p>
+
+
+
 </div>
 </body>
 </html>
