--- a/TCP1/html/RuaDosAcouguesVelhos.html
+++ b/TCP1/html/RuaDosAcouguesVelhos.html
@@ -3,47 +3,84 @@
 <h1>Rua dos Açougues velhos</h1>
 <p>Número: 3</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-03-RuaDosAcouguesVelhos-nascente.PNG'/>
 <p>Legenda: Rua dos Açougues Velhos - vista nascente. </p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-03-RuaDosAcouguesVelhos-poente.PNG'/>
 <p>Legenda: Rua dos Açougues Velhos - vista poente. </p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Corresponde à casa nº16 da Praça do Pão para onde tem a frontaria e serventia principais. </p>
+</div>
+<div>
+<p>Estas casas foram construídas depois de 1550, em pertenças do nº16, da Praça do Pão e, desde o ano de 1725, constituem um só prazo.</p>
+</div>
+<div>
+<p>A última porta do nº6, para o lado do norte, é serventia do nº7 da rua Nova. Encontram-se unidas desde o ano de 1641.</p>
+</div>
+<div>
+<p>A última porta do nº6, para o lado do norte, é serventia do nº7 da rua Nova. Encontram-se unidas desde o ano de 1641.</p>
+</div>
+<div>
+<p>Desde do ano 1644 que correspondem ao nº5 da Rua Nova de Sousa, para onde têm a frontaria e serventia principais.</p>
+</div>
+<div>
+<p>Foi demolida para alargamento das casas do Cabido, depois do ano de 1793.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: None</p>
 <p>Foro: None</p>
-<p>Descrição: Corresponde à casa nº16 da </p>
+<p>Descrição: Corresponde à casa nº16 da Praça do Pão para onde tem a frontaria e serventia principais. </p>
+
+
+
 </div>
 <div>
 <p>Número: 2,3,4</p>
 <p>Enfiteuta: Padre Francisco Xavier de Campos</p>
 <p>Foro: 610 reis e 1 capão</p>
-<p>Descrição: Estas casas foram construídas depois de </p>
+<p>Descrição: Estas casas foram construídas depois de 1550, em pertenças do nº16, da Praça do Pão e, desde o ano de 1725, constituem um só prazo.</p>
+
+
+
 </div>
 <div>
 <p>Número: 5</p>
 <p>Enfiteuta: Teresa Tomásia, viúva de Agostinho Marques da Silva, ourives</p>
 <p>Foro: 105 reis e 1 galinha</p>
-<p>Descrição: A última porta do nº6, para o lado do norte, é serventia do nº7 da </p>
+<p>Descrição: A última porta do nº6, para o lado do norte, é serventia do nº7 da rua Nova. Encontram-se unidas desde o ano de 1641.</p>
+
+
+
 </div>
 <div>
 <p>Número: 6</p>
 <p>Enfiteuta: Teresa Tomásia, viúva de Agostinho Marques da Silva, ourives</p>
 <p>Foro: 120 reis e 1 galinha</p>
-<p>Descrição: A última porta do nº6, para o lado do norte, é serventia do nº7 da </p>
+<p>Descrição: A última porta do nº6, para o lado do norte, é serventia do nº7 da rua Nova. Encontram-se unidas desde o ano de 1641.</p>
+
+
+
 </div>
 <div>
 <p>Número: 7 e 8</p>
-<p>Descrição: Desde do ano </p>
+<p>Descrição: Desde do ano 1644 que correspondem ao nº5 da Rua Nova de Sousa, para onde têm a frontaria e serventia principais.</p>
+
+
+
 </div>
 <div>
 <p>Número: 9</p>
 <p>Enfiteuta: Pedro Pereira</p>
 <p>Foro: 40 reis e 1 galinha</p>
-<p>Descrição: Foi demolida para alargamento das casas do </p>
+<p>Descrição: Foi demolida para alargamento das casas do Cabido, depois do ano de 1793.</p>
+
+
+
 </div>
 </body>
 </html>
