--- a/TCP1/html/RuaNova.html
+++ b/TCP1/html/RuaNova.html
@@ -3,19 +3,72 @@
 <h1>Rua Nova</h1>
 <p>Número: 2</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-02-RuaNova-norte.png'/>
 <p>Legenda: Rua Nova - vista norte. </p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-02-RuaNova-sul.png'/>
 <p>Legenda: Rua Nova - vista sul. </p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>É morada dos Sacristãos da Sé. Parte desta casa pertence à obra da Sé e a restante
+                à Irmandade da Misericórdia. A parte da obra da Sé confronta, de nascente, com casas da dita Irmandade (antigas
+                casas foreiras à Capela da senhora da Glória) e, de poente, com a casa nº2. O prazo
+                era constituído por casa, com ênxido ao redor da capela da Senhora da Piedade de Jesus da Misericórdia.</p>
+</div>
+<div>
+<p>Confronta, de poente, com casa que se situa nos antigos açouges.</p>
+</div>
+<div>
+<p> A casa nº6 foi construída depois do ano de 1543. Desde o ano de 1644 que as casas nº7 e 8 da Rua dos Açougues Velhos, por baixo do nº6.Foi
+                construída em 1543, em pertenças do prazo da casa nº5. No ano de 1641 foram-lhe unidas as traseiras do nº5 da Rua dos Açougues Velhos.</p>
+</div>
+<div>
+<p> A casa nº6 foi construída depois do ano de 1543. Desde o ano de 1644 que as casas nº7 e 8 da Rua dos Açougues Velhos, por baixo do nº6.Foi
+                    construída em 1543, em pertenças do prazo da casa nº5. No ano de 1641 foram-lhe unidas as traseiras do nº5 da Rua dos Açougues Velhos.</p>
+</div>
+<div>
+<p>Confronta, de poente, com casa for. ao morgado de Real.Possui uma porta de serventia para a Rua dos Açougues Velhos, por baixo do nº6.Foi construída em 1543
+                 , em pertenças do prazo da casa nº5.No ano de 1641 foram-lhe unidas as traseiras do nº5 da Rua dos Açougues Velhos.</p>
+</div>
+<div>
+<p>Foi construída, depoisde 1707, no lugar de uma cozinha pertencente ao nº10, ao qual paga, de pensão ou foro, 60 reis. Confronta, do nascente, com o nº8 e , de poente, com parte da casa nº10. É subenfiteuta Bento de Sá, casado com  Francisca da Silva .</p>
+</div>
+<div>
+<p>Foi construída depois de 1725, no lugar de uma cozinha pertencente ao nº10, ao qual paga, de pensão ou foro, 60 reis.Confronta, do nascente, com o nº8 e, de poente, com parte da casa nº10. É subenfiteuta Bento de Sá, casado com Francisca da Silva.</p>
+</div>
+<div>
+<p>Parte desta casa é foreira à Mitra.</p>
+<p>Confronta, de nascente, com a parte da Mitra.</p>
+</div>
+<div>
+<p>Encontram-se unidas desde o ano de 1692</p>
+</div>
+<div>
+<p>Encontram-se unidas desde o ano de 1692</p>
+</div>
+<div>
+<p>Confronta, de poente, com a Rua dos Sapateiros. </p>
+</div>
+<div>
+<p>Foi construída, depois do ano de 1719, numa parte da casa nº15 e no lugar de uma cozinha do nº1 da Rua do Campo, às quais paga, de pensão ou foro, respetivamente, 200 reis e 1 galinha, e 110 reis. São subenfiteutas André Carvalho, tratante, e sua mulher, Luisa da Costa.</p>
+</div>
+<div>
+<p>Corresponde ao nº1 da Rua do Campo, para onde se tem a fronteira e serventia principais.A frontaria que dá para a Rua Nova de Sousa é foreira, à comenda de S. Pedro de Merelim.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: None</p>
 <p>Foro: None</p>
-<p>Descrição: É morada dos Sacristãos da </p>
+<p>Descrição: É morada dos Sacristãos da Sé. Parte desta casa pertence à obra da Sé e a restante
+                à Irmandade da Misericórdia. A parte da obra da Sé confronta, de nascente, com casas da dita Irmandade (antigas
+                casas foreiras à Capela da senhora da Glória) e, de poente, com a casa nº2. O prazo
+                era constituído por casa, com ênxido ao redor da capela da Senhora da Piedade de Jesus da Misericórdia.</p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
@@ -31,71 +84,112 @@
 <p>Número: 4</p>
 <p>Enfiteuta: Manuel Pereira Tadim</p>
 <p>Foro:  50 reis e 1 galinha</p>
-<p>Descrição: Confronta, de poente, com casa que se situa nos </p>
+<p>Descrição: Confronta, de poente, com casa que se situa nos antigos açouges.</p>
+
+
+
 </div>
 <div>
 <p>Número: 5</p>
 <p>Enfiteuta: Teresa Tomásia, viúva de Agostinho Marques da Silva, ourives.</p>
 <p>Foro: 200 reais e 2 galinhas</p>
-<p>Descrição:  A casa nº6 foi construída depois do ano de </p>
+<p>Descrição:  A casa nº6 foi construída depois do ano de 1543. Desde o ano de 1644 que as casas nº7 e 8 da Rua dos Açougues Velhos, por baixo do nº6.Foi
+                construída em 1543, em pertenças do prazo da casa nº5. No ano de 1641 foram-lhe unidas as traseiras do nº5 da Rua dos Açougues Velhos.</p>
+
+
+
 </div>
 <div>
 <p>Número: 6</p>
 <p>Enfiteuta: Teresa Tomásia, viúva de Agostinho Marques da Silva, ourives.</p>
 <p>Foro: 50 reis e 1 galinha</p>
-<p>Descrição:  A casa nº6 foi construída depois do ano de </p>
+<p>Descrição:  A casa nº6 foi construída depois do ano de 1543. Desde o ano de 1644 que as casas nº7 e 8 da Rua dos Açougues Velhos, por baixo do nº6.Foi
+                    construída em 1543, em pertenças do prazo da casa nº5. No ano de 1641 foram-lhe unidas as traseiras do nº5 da Rua dos Açougues Velhos.</p>
+
+
+
 </div>
 <div>
 <p>Número: 7</p>
 <p>Enfiteuta: António Fernandes Veloso, ourives de prata, e sua mulher, Assunção Vieira</p>
 <p>Foro: 60 reis e 1 galinha</p>
-<p>Descrição: Confronta, de poente, com casa for. ao morgado de </p>
+<p>Descrição: Confronta, de poente, com casa for. ao morgado de Real.Possui uma porta de serventia para a Rua dos Açougues Velhos, por baixo do nº6.Foi construída em 1543
+                 , em pertenças do prazo da casa nº5.No ano de 1641 foram-lhe unidas as traseiras do nº5 da Rua dos Açougues Velhos.</p>
+
+
+
 </div>
 <div>
 <p>Número: 8</p>
 <p>Enfiteuta:  Vid. casa nº32, Rua de Maximinos(rua nº22).</p>
 <p>Foro: None</p>
-<p>Descrição: Foi construída, depoisde </p>
+<p>Descrição: Foi construída, depoisde 1707, no lugar de uma cozinha pertencente ao nº10, ao qual paga, de pensão ou foro, 60 reis. Confronta, do nascente, com o nº8 e , de poente, com parte da casa nº10. É subenfiteuta Bento de Sá, casado com  Francisca da Silva .</p>
+
+
+
 </div>
 <div>
 <p>Número: 9</p>
 <p>Enfiteuta: Vid. casa nº10.</p>
 <p>Foro: None</p>
-<p>Descrição: Foi construída depois de </p>
+<p>Descrição: Foi construída depois de 1725, no lugar de uma cozinha pertencente ao nº10, ao qual paga, de pensão ou foro, 60 reis.Confronta, do nascente, com o nº8 e, de poente, com parte da casa nº10. É subenfiteuta Bento de Sá, casado com Francisca da Silva.</p>
+
+
+
 </div>
 <div>
 <p>Número: 10</p>
 <p>Enfiteuta: Luísa da Rocha</p>
 <p>Foro: 260 reis e ...galinhas</p>
-<p>Descrição: Parte desta casa é foreira à </p>
+<p>Descrição: Parte desta casa é foreira à Mitra.
+                Confronta, de nascente, com a parte da Mitra.</p>
+
+
+
 </div>
 <div>
 <p>Número: 11</p>
 <p>Enfiteuta: Lic.Custódio de Azevedo Proença</p>
 <p>Foro: 340 reis e galinhas</p>
-<p>Descrição: Encontram-se unidas desde o ano de </p>
+<p>Descrição: Encontram-se unidas desde o ano de 1692</p>
+
+
+
 </div>
 <div>
 <p>Número: 12</p>
 <p>Enfiteuta: Lic.Custódio de Azevedo Proença</p>
 <p>Foro: 420 reis e 2 galinhas</p>
-<p>Descrição: Encontram-se unidas desde o ano de </p>
+<p>Descrição: Encontram-se unidas desde o ano de 1692</p>
+
+
+
 </div>
 <div>
 <p>Número: 13</p>
 <p>Enfiteuta: Lic. Henrique Ferreira Carmo</p>
 <p>Foro: 300 reis e 2 galinhas</p>
-<p>Descrição: Confronta, de poente, com a </p>
+<p>Descrição: Confronta, de poente, com a Rua dos Sapateiros. </p>
+
+
+
 </div>
 <div>
 <p>Número: 14</p>
 <p>Enfiteuta: Vid. casa nº1 da Rua do Campo(rua nº1).</p>
 <p>Foro: None</p>
-<p>Descrição: Foi construída, depois do ano de </p>
+<p>Descrição: Foi construída, depois do ano de 1719, numa parte da casa nº15 e no lugar de uma cozinha do nº1 da Rua do Campo, às quais paga, de pensão ou foro, respetivamente, 200 reis e 1 galinha, e 110 reis. São subenfiteutas André Carvalho, tratante, e sua mulher, Luisa da Costa.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 15</p>
-<p>Descrição: Corresponde ao nº1 da </p>
+<p>Descrição: Corresponde ao nº1 da Rua do Campo, para onde se tem a fronteira e serventia principais.A frontaria que dá para a Rua Nova de Sousa é foreira, à comenda de S. Pedro de Merelim.</p>
+
+
+
 </div>
 </body>
 </html>
