--- a/TCP1/html/TravessaDaRuaDeSJoao.html
+++ b/TCP1/html/TravessaDaRuaDeSJoao.html
@@ -3,66 +3,145 @@
 <h1>Travessa da Rua de S. João para a do Forno</h1>
 <p>Número: 10</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-10-TravessaDaRuaDeSJoaoParaADoForno-Norte.jpg'/>
 <p>Legenda: Travessa da Rua de S. João para a do Forno - vista norte. </p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-10-TravessaDaRuaDeSJoaoParaADoForno-Sul.jpg'/>
 <p>Legenda: Travessa da Rua de S. João para a do Forno - vista sul. </p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Corresponde ao n.º 7 da Rua de S. João,
+                    para onde tem a frontaria e serventia principais.</p>
+</div>
+<div>
+<p>No ano de 1607, por escambo realizado entre o Cabido
+                    e a Companhia de Jesus, esta casa foi trocada com o casal de Real,
+                    situado na freguesia de S. Jerónimo de Real.
+                    Confronta com quintal dos padres da Companhia de Jesus.</p>
+</div>
+<div>
+<p>Emprazamento feito em 1724. Confronta, do nascente, com casa for. ao chantrado.</p>
+</div>
+<div>
+<p>Foi construída em pertenças da casa n.º 3, depois do ano de 1534.</p>
+</div>
+<div>
+<p>A casa n.º 6 confronta, de nascente, com casa for. à cororaria.
+                    Pertence, também, ao enfiteuta destas duas casas o n.º 12 da rua do Forno.</p>
+</div>
+<div>
+<p>A casa n.º 6 confronta, de nascente, com casa for. à cororaria.
+                    Pertence, também, ao enfiteuta destas duas casas o n.º 12 da rua do Forno.</p>
+</div>
+<div>
+<p>Encontram-se unidos a este prazo os n.º 10 e 11 da Rua do Forno,
+                    desde o ano de 1596</p>
+</div>
+<div>
+<p>Pertencem ao n.º 9 da Rua do Forno, para onde têm a frontaria e serventia principais.
+                    A casa n.º 9 confronta, do nascente, com casa foreira cororaria e ficou unida ao n.º 8 no ano
+                    de 1674.</p>
+</div>
+<div>
+<p>Parte desta casa pertence à Esmola e parte ao chantrado.
+                    Confronta, do poente, com casa foreira à cororaria e com o n.º 9.</p>
+</div>
+<div>
+<p>Foi construída em pertenças do n.º 11 no ano de 1694.</p>
+</div>
+<div>
+<p>Confronta, do nascente, com casa foreira ao Hospital de S. Marcos.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: None</p>
 <p>Foro: None</p>
-<p>Descrição: Corresponde ao n.º 7 da </p>
+<p>Descrição: Corresponde ao n.º 7 da Rua de S. João,
+                    para onde tem a frontaria e serventia principais.</p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
 <p>Enfiteuta: None</p>
 <p>Foro: None</p>
-<p>Descrição: No ano de </p>
+<p>Descrição: No ano de 1607, por escambo realizado entre o Cabido
+                    e a Companhia de Jesus, esta casa foi trocada com o casal de Real,
+                    situado na freguesia de S. Jerónimo de Real.
+                    Confronta com quintal dos padres da Companhia de Jesus.</p>
+
+
+
 </div>
 <div>
 <p>Número: 3</p>
 <p>Enfiteuta: Teresa de Araújo, mulher de Manuel de Sousa, vidraceiro</p>
 <p>Foro: 240 reis e 1 capão</p>
-<p>Descrição: Emprazamento feito em </p>
+<p>Descrição: Emprazamento feito em 1724. Confronta, do nascente, com casa for. ao chantrado.</p>
+
+
+
 </div>
 <div>
 <p>Número: 4</p>
 <p>Enfiteuta: Manuel de Faria</p>
 <p>Foro: 400 reis e 1 capão</p>
-<p>Descrição: Foi construída em pertenças da casa n.º 3, depois do ano de </p>
+<p>Descrição: Foi construída em pertenças da casa n.º 3, depois do ano de 1534.</p>
+
+
+
 </div>
 <div>
 <p>Número: 5</p>
 <p>Enfiteuta: Carlos de Magalhães de Azevedo, Cónego</p>
 <p>Foro: 475 reis e 2 capões</p>
 <p>Descrição: A casa n.º 6 confronta, de nascente, com casa for. à cororaria.
-                    Pertence, também, ao enfiteuta destas duas casas o n.º 12 da </p>
+                    Pertence, também, ao enfiteuta destas duas casas o n.º 12 da rua do Forno.</p>
+
+
+
 </div>
 <div>
 <p>Número: 6</p>
 <p>Enfiteuta: Carlos de Magalhães de Azevedo, Cónego</p>
 <p>Foro: 250 reis e galinhas</p>
 <p>Descrição: A casa n.º 6 confronta, de nascente, com casa for. à cororaria.
-                    Pertence, também, ao enfiteuta destas duas casas o n.º 12 da </p>
+                    Pertence, também, ao enfiteuta destas duas casas o n.º 12 da rua do Forno.</p>
+
+
+
 </div>
 <div>
 <p>Número: 7</p>
 <p>Enfiteuta: Félix José Machado</p>
 <p>Foro: 420 e 4 galinhas</p>
-<p>Descrição: Encontram-se unidos a este prazo os n.º 10 e 11 da </p>
+<p>Descrição: Encontram-se unidos a este prazo os n.º 10 e 11 da Rua do Forno,
+                    desde o ano de 1596</p>
+
+
+
 </div>
 <div>
 <p>Número: 8 e 9</p>
-<p>Descrição: Pertencem ao n.º 9 da </p>
+<p>Descrição: Pertencem ao n.º 9 da Rua do Forno, para onde têm a frontaria e serventia principais.
+                    A casa n.º 9 confronta, do nascente, com casa foreira cororaria e ficou unida ao n.º 8 no ano
+                    de 1674.</p>
+
+
+
 </div>
 <div>
 <p>Número: 10</p>
 <p>Foro: 115 reis e 8 pretos (de censo)</p>
-<p>Descrição: Parte desta casa pertence à </p>
+<p>Descrição: Parte desta casa pertence à Esmola e parte ao chantrado.
+                    Confronta, do poente, com casa foreira à cororaria e com o n.º 9.</p>
+
+
+
 </div>
 <div>
 <p>Número: 11</p>
@@ -73,13 +152,19 @@
 <p>Número: 12</p>
 <p>Enfiteuta: Lic. Manuel de Faria da Cunha</p>
 <p>Foro: 70 reis e 1 galinha</p>
-<p>Descrição: Foi construída em pertenças do n.º 11 no ano de </p>
+<p>Descrição: Foi construída em pertenças do n.º 11 no ano de 1694.</p>
+
+
+
 </div>
 <div>
 <p>Número: 13</p>
 <p>Enfiteuta: Manuel Francisco, alfaiate</p>
 <p>Foro: 410 e 4 galinhas</p>
-<p>Descrição: Confronta, do nascente, com casa foreira ao </p>
+<p>Descrição: Confronta, do nascente, com casa foreira ao Hospital de S. Marcos.</p>
+
+
+
 </div>
 </body>
 </html>
