--- a/TCP1/html/CampoDeNossaSenhoraABranca-RuaDaRegua-RuaDaSeara.html
+++ b/TCP1/html/CampoDeNossaSenhoraABranca-RuaDaRegua-RuaDaSeara.html
@@ -3,91 +3,349 @@
 <h1>Campo de Nossa Senhora a Branca. Rua da Régua. Rua Nova da Seara</h1>
 <p>Número: 43</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-43-CampoDeNossaSenhoraABranca-RuaDaRegua-RuaDaSeara-Norte.jpg'/>
 <p>Legenda: Campo de Nossa Senhora a Branca. Rua da Régua. Rua Nova da Seara- Norte.</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-43-CampoDeNossaSenhoraABranca-RuaDaRegua-RuaDaSeara-Sul.jpg'/>
 <p>Legenda: Campo de Nossa Senhora a Branca. Rua da Régua. Rua Nova da Seara- Sul</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Os herdeiros de Cosme Francisco, besteiro, casado
+                    com Isabel Pereira, pagam 540 reis e 1 galinha ao enfiteuta
+                    do prazo dos campos detrás de N. Sra. a Branca e das Ranhas, 
+                    situado na freguesia de S. Vitor. Confronta, do poente, com casa foreira ao
+                    Hospital de S.Marcos.</p>
+</div>
+<div>
+<p>Os herdeiros de Francisco Gomes, alfaiate, casado
+                        com Margarida Francisca, pagam 660 reis e 1 galinha ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.</p>
+</div>
+<div>
+<p>Os herdeiros de Maria de Oliveira, viúva, pagam 710 reis 
+                        e 1 galinha ao enfiteuta do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.</p>
+</div>
+<div>
+<p>Os herdeiros de Tomé de Araújo, carpinteiro, casado
+                        com Maria Antónia, pagam 1050 reis e 1 galinha ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.</p>
+</div>
+<div>
+<p>Os herdeiros de Domingos Fernandes, tanoeiro, casado
+                        com Isabel Gonçalves, pagam 1400 reis e 2 galinhas ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.</p>
+</div>
+<div>
+<p>Os herdeiros de Maria de Sousa, casada
+                        com Tomé da Silva, da freguesia de Barroso,
+                        pagam 750 reis e 1 galinha ao enfiteuta do prazo dos campos detrás de N. Sra. a Branca
+                        e das Ranhas.</p>
+<p>Esteve unida ao n.º10 entre os anos de 1612 a 1671.</p>
+</div>
+<div>
+<p>Os herdeiros de Inácia do Vale, filha natural de 
+                        Isabel Dias, pagam 720 reis e 1 galinha ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.
+                        Esteve unida ao n.º10 entre os anos de 1612 a 1679.</p>
+</div>
+<div>
+<p>Os herdeiros de Domingos Fernandes, ferreiro, casado
+                        com Isabel Antónia, pagam foro ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.</p>
+</div>
+<div>
+<p>Os herdeiros de António Carvalho, sombreiro, casado
+                        com Maria Martins, pagam 700 reis e 1 galinha ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.</p>
+</div>
+<div>
+<p>Os herdeiros de Francisco Martins, sombreiro, casado
+                        com Gregória Ferreira, pagam 770 reis ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.</p>
+</div>
+<div>
+<p>Os herdeiros do Padre António de Oliveira, pagam 
+                        755 reis ao enfiteuta do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.</p>
+</div>
+<div>
+<p>Os herdeiros de Maria Gonçalves, viúva de
+                        Francisco Gonçalves, pagam 700 reis e 1 galinha ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.</p>
+<p>Foi subenfiteut, juntamente com os n.º18, 19, 20, 21 e 22, no ano de 1612.</p>
+</div>
+<div>
+<p>Os subenfiteutas pagam ao enfiteuta do prazo dos campos detrás de N. Sra. a Branca
+                    e das Ranhas, pelo n.º18, 100 reis; pelo n.º19, 600 reis e 1 galinha; pelos n.º20 e 21
+                    (unidos), 700 reis e 1 galinha; e pelo n.º22, 700 reis e 1 galinha.</p>
+<p>A casa n.º22 confronta, do nascente, com casa foeira à Mitra.</p>
+</div>
+<div>
+<p>Pagam 1800 reis ao n.º24.</p>
+</div>
+<div>
+<p>Manuel Teixeira, sombreireiro, casado com
+                         Teresa Maria, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>Senhorinha Lopes, solteira, e seu filho
+                            João Marcos, da freguesia de S. Mamede d'Este,
+                            pagam 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>Bento de Macedo, sombreireiro, casado com
+                            Quitéria Francisca, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>João Franscisco de Oliveira, alfaiate, casado com
+                            Mariana Antónia, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>Carlos Pereira, sombreireiro, casado com
+                            Mariana Francisca, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>António de Araújo, serralheiro, casado com
+                            Josefa Teresa, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>Manuel Marques, sombreireiro, casado com
+                            Antónia Francisca, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>José de Oliveira, carpinteiro, casado com
+                            Maria Francisca, paga 1800 reis ao n.º24.</p>
+</div>
+<div>
+<p>Manuel Dias, serralheiro, casado com
+                            Maria Francisca, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>António de Araújo, sombreireiro, casado com
+                            Isabel Maria, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>Francisco Silva, carpinteiro, casado com
+                            Isabel Gomes, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>Custódio Francisco, pedreiro, casado com
+                            Ana Francisca, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>Silvestre de Oliveira, jornaleiro, casado com
+                            Inês Dantas, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>Ana Ferreira, viúva de 
+                            Domingos Marques, alfaiate, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>Manuel da Costa, sombreireiro, casado com
+                            Marta Ferreira, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>Diogo da Costa, sombreireiro, casado com
+                            Ana Lopes, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>Custódio Pereira, pedreiro, casado com
+                            Ursula Francisca, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>Geraldo de Matos, sombreireiro, casado com
+                            Domingas Francisca, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>Garcia Correia, carpinteiro, casado com
+                            Francisca de Barros, paga 1200 reis ao n.º24.</p>
+</div>
+<div>
+<p>Domingos de Barros, alfaiate, viúvo, paga 1200 reis ao n.º24.</p>
+<p>Confronta, do poente, com propriedade do prazo principal.</p>
+</div>
+<div>
+<p>E cabeça de Prazo «Casal de Entre os Matos», da freguesia de S. Vitor.</p>
+<p>O emprazamento mais antigo que se conehce data de 1483 e foi feito a favor de 
+                        Martim Álvares, ouvires, da cidade de Braga.
+                        Seguem-se os emprazamentos dos anos de 1550 e 1579. 
+                        Pertence a este prazo os n.º1 a 23 da rua Nova da Seara.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Sebastião Luís de Faria, enfiteuta principal do prazo dos campos detrás de Nossa Senhora 
                 a Branca e das Ranhas, sito na freguesia de S.Vitor</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Cosme Francisco, besteiro, casado
+                    com Isabel Pereira, pagam 540 reis e 1 galinha ao enfiteuta
+                    do prazo dos campos detrás de N. Sra. a Branca e das Ranhas, 
+                    situado na freguesia de S. Vitor. Confronta, do poente, com casa foreira ao
+                    Hospital de S.Marcos.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 2 e 3</p>
 <p>Enfiteuta: Sebastião Luís de Faria, enfiteuta principal do prazo dos campos detrás de Nossa Senhora 
                     a Branca e das Ranhas, sito na freguesia de S.Vitor</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Francisco Gomes, alfaiate, casado
+                        com Margarida Francisca, pagam 660 reis e 1 galinha ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 4</p>
 <p>Enfiteuta: Sebastião Luís de Faria, enfiteuta principal do prazo dos campos detrás de Nossa Senhora 
                     a Branca e das Ranhas, sito na freguesia de S.Vitor</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Maria de Oliveira, viúva, pagam 710 reis 
+                        e 1 galinha ao enfiteuta do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 5 e 6</p>
 <p>Enfiteuta: Sebastião Luís de Faria, enfiteuta principal do prazo dos campos detrás de Nossa Senhora 
                     a Branca e das Ranhas, sito na freguesia de S.Vitor</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Tomé de Araújo, carpinteiro, casado
+                        com Maria Antónia, pagam 1050 reis e 1 galinha ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 7, 8 e 9</p>
 <p>Enfiteuta: Sebastião Luís de Faria, enfiteuta principal do prazo dos campos detrás de Nossa Senhora 
                     a Branca e das Ranhas, sito na freguesia de S.Vitor</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Domingos Fernandes, tanoeiro, casado
+                        com Isabel Gonçalves, pagam 1400 reis e 2 galinhas ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 11</p>
 <p>Enfiteuta: Sebastião Luís de Faria, enfiteuta principal do prazo dos campos detrás de Nossa Senhora 
                     a Branca e das Ranhas, sito na freguesia de S.Vitor</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Maria de Sousa, casada
+                        com Tomé da Silva, da freguesia de Barroso,
+                        pagam 750 reis e 1 galinha ao enfiteuta do prazo dos campos detrás de N. Sra. a Branca
+                        e das Ranhas.
+                    Esteve unida ao n.º10 entre os anos de 1612 a 1671.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 12</p>
 <p>Enfiteuta: Sebastião Luís de Faria, enfiteuta principal do prazo dos campos detrás de Nossa Senhora 
                     a Branca e das Ranhas, sito na freguesia de S.Vitor</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Inácia do Vale, filha natural de 
+                        Isabel Dias, pagam 720 reis e 1 galinha ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.
+                        Esteve unida ao n.º10 entre os anos de 1612 a 1679.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 13</p>
 <p>Enfiteuta: Sebastião Luís de Faria, enfiteuta principal do prazo dos campos detrás de Nossa Senhora 
                     a Branca e das Ranhas, sito na freguesia de S.Vitor</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Domingos Fernandes, ferreiro, casado
+                        com Isabel Antónia, pagam foro ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 14</p>
 <p>Enfiteuta: Sebastião Luís de Faria, enfiteuta principal do prazo dos campos detrás de Nossa Senhora 
                     a Branca e das Ranhas, sito na freguesia de S.Vitor</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de António Carvalho, sombreiro, casado
+                        com Maria Martins, pagam 700 reis e 1 galinha ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 15</p>
 <p>Enfiteuta: Sebastião Luís de Faria, enfiteuta principal do prazo dos campos detrás de Nossa Senhora 
                     a Branca e das Ranhas, sito na freguesia de S.Vitor</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Francisco Martins, sombreiro, casado
+                        com Gregória Ferreira, pagam 770 reis ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 16</p>
 <p>Enfiteuta: Sebastião Luís de Faria, enfiteuta principal do prazo dos campos detrás de Nossa Senhora 
                     a Branca e das Ranhas, sito na freguesia de S.Vitor</p>
-<p>Descrição: Os herdeiros do </p>
+<p>Descrição: 
+                    Os herdeiros do Padre António de Oliveira, pagam 
+                        755 reis ao enfiteuta do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 17</p>
 <p>Enfiteuta: Sebastião Luís de Faria, enfiteuta principal do prazo dos campos detrás de Nossa Senhora 
                     a Branca e das Ranhas, sito na freguesia de S.Vitor</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Maria Gonçalves, viúva de
+                        Francisco Gonçalves, pagam 700 reis e 1 galinha ao enfiteuta
+                        do prazo dos campos detrás de N. Sra. a Branca e das Ranhas.
+                    Foi subenfiteut, juntamente com os n.º18, 19, 20, 21 e 22, no ano de 1612.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 18 a 22</p>
 <p>Enfiteuta: Sebastião Luís de Faria, enfiteuta principal do prazo dos campos detrás de Nossa Senhora 
                     a Branca e das Ranhas, sito na freguesia de S.Vitor</p>
-<p>Descrição: Os subenfiteutas pagam ao enfiteuta do prazo dos campos detrás de </p>
+<p>Descrição: 
+                    Os subenfiteutas pagam ao enfiteuta do prazo dos campos detrás de N. Sra. a Branca
+                    e das Ranhas, pelo n.º18, 100 reis; pelo n.º19, 600 reis e 1 galinha; pelos n.º20 e 21
+                    (unidos), 700 reis e 1 galinha; e pelo n.º22, 700 reis e 1 galinha.
+                    A casa n.º22 confronta, do nascente, com casa foeira à Mitra.
+                </p>
+
+
+
 </div>
 </body>
 </html>
