--- a/TCP1/html/CampoDeSantaAna.html
+++ b/TCP1/html/CampoDeSantaAna.html
@@ -3,59 +3,140 @@
 <h1>Campo de Santa Ana</h1>
 <p>Número: 41</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-41-CampoDeSantaAna-Norte.jpg'/>
 <p>Legenda: Campo de Santa Ana - Norte.</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-41-CampoDeSantaAna-Sul.jpg'/>
 <p>Legenda: Campo de Santa Ana - Sul.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Uma parte do quintal desta casa é pertença do prazo do casal dos Chãos ou Quinteiro, 
+                        sito na freguesia de S.José de S.Lázaro, à face do qual está subemprazado.</p>
+</div>
+<div>
+<p>Uma parte do quintal desta casa é pertença do prazo do casal dos Chãos ou Quinteiro, 
+                        a face do qual está subemprazado.</p>
+</div>
+<div>
+<p>Uma parte do quintal desta casa é pertença do prazo do casal dos Chãos ou Quinteiro, 
+                        à face do qual está subemprazado.</p>
+<p>Confronta, do poente, com casa foreira ao Convento de Vilar de Frades.</p>
+</div>
+<div>
+<p>Uma parte do quintal desta casa é pertença do prazo do casal dos Chãos ou Quinteiro, 
+                        à face do qual está subemprazado.</p>
+</div>
+<div>
+<p>Uma parte do quintal desta casa é pertença do prazo do casal dos Chãos ou Quinteiro, 
+                        à face do qual está subemprazado. A casa e a parte sul do quintal pagam foro ao
+                    mosteiro de Vilar de Frades. Confronta, do nascente, 
+                    com a rua de S.Gonçalo.</p>
+</div>
+<div>
+<p>Vincente Francisco, casado com Francisca Ferreira, 
+                    paga, de pensões ou foro, 10 reis ao n.º3 da Rua das Águas, por um 
+                    pedaço de terra que se separou do campo da Rua das Águas ou do
+                    Caminho Novo.</p>
+<p>A casa e a outra parte do quintal não são foreiras ao cabido.</p>
+</div>
+<div>
+<p>Gualter da Fonseca Pereira, reitor de
+                    Sta. Maria de Covelo, paga, de pensão ou foro, 
+                        50 reis ao n.º3 da Rua das Águas ou do Caminho Novo.</p>
+<p>A casa e a outra parte do quintal não são foreiras ao cabido.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: D.Agostinha de Barros Gavião, enfiteuta principal do casal dos Chãos ou Quinteiro, 
                 sito na freguesia de S.José de S.Lázaro</p>
-<p>Descrição: Uma parte do quintal desta casa é pertença do prazo do casal dos Chãos ou Quinteiro, 
-                        sito na freguesia de S.José de S.Lázaro, à face do qual está subemprazado.</p>
+<p>Descrição: 
+                    Uma parte do quintal desta casa é pertença do prazo do casal dos Chãos ou Quinteiro, 
+                        sito na freguesia de S.José de S.Lázaro, à face do qual está subemprazado.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
 <p>Enfiteuta: D.Agostinha de Barros Gavião, enfiteuta principal do casal dos Chãos ou Quinteiro, 
                     sito na freguesia de S.José de S.Lázaro</p>
-<p>Descrição: Uma parte do quintal desta casa é pertença do prazo do casal dos Chãos ou Quinteiro, 
-                        a face do qual está subemprazado.</p>
+<p>Descrição: 
+                    Uma parte do quintal desta casa é pertença do prazo do casal dos Chãos ou Quinteiro, 
+                        a face do qual está subemprazado.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 3</p>
 <p>Enfiteuta: D.Agostinha de Barros Gavião, enfiteuta principal do casal dos Chãos ou Quinteiro, 
                     sito na freguesia de S.José de S.Lázaro</p>
-<p>Descrição: Uma parte do quintal desta casa é pertença do prazo do casal dos Chãos ou Quinteiro, 
-                        à face do qual está subemprazado.</p>
+<p>Descrição: 
+                    Uma parte do quintal desta casa é pertença do prazo do casal dos Chãos ou Quinteiro, 
+                        à face do qual está subemprazado.
+                    Confronta, do poente, com casa foreira ao Convento de Vilar de Frades.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 4</p>
 <p>Enfiteuta: D.Agostinha de Barros Gavião, enfiteuta principal do casal dos Chãos ou Quinteiro, 
                     sito na freguesia de S.José de S.Lázaro</p>
-<p>Descrição: Uma parte do quintal desta casa é pertença do prazo do casal dos Chãos ou Quinteiro, 
-                        à face do qual está subemprazado.</p>
+<p>Descrição: 
+                    Uma parte do quintal desta casa é pertença do prazo do casal dos Chãos ou Quinteiro, 
+                        à face do qual está subemprazado.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 5</p>
 <p>Enfiteuta: D.Agostinha de Barros Gavião, enfiteuta principal do casal dos Chãos ou Quinteiro, 
                     sito na freguesia de S.José de S.Lázaro</p>
-<p>Descrição: Uma parte do quintal desta casa é pertença do prazo do casal dos Chãos ou Quinteiro, 
+<p>Descrição: 
+                    Uma parte do quintal desta casa é pertença do prazo do casal dos Chãos ou Quinteiro, 
                         à face do qual está subemprazado. A casa e a parte sul do quintal pagam foro ao
-                    </p>
+                    mosteiro de Vilar de Frades. Confronta, do nascente, 
+                    com a rua de S.Gonçalo.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 6</p>
 <p>Enfiteuta: Manuel Fernandes Lima</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Vincente Francisco, casado com Francisca Ferreira, 
+                    paga, de pensões ou foro, 10 reis ao n.º3 da Rua das Águas, por um 
+                    pedaço de terra que se separou do campo da Rua das Águas ou do
+                    Caminho Novo.
+                    A casa e a outra parte do quintal não são foreiras ao cabido.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 7</p>
 <p>Enfiteuta: Manuel Fernandes Lima</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Gualter da Fonseca Pereira, reitor de
+                    Sta. Maria de Covelo, paga, de pensão ou foro, 
+                        50 reis ao n.º3 da Rua das Águas ou do Caminho Novo.
+                    A casa e a outra parte do quintal não são foreiras ao cabido.
+                </p>
+
+
+
 </div>
 </body>
 </html>
