--- a/TCP1/html/CampoECalcadaDeNossaSenhoraABranca.html
+++ b/TCP1/html/CampoECalcadaDeNossaSenhoraABranca.html
@@ -3,149 +3,391 @@
 <h1>Campo e Calçada de Nossa Senhora a Branca</h1>
 <p>Número: 42</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-42-CampoECalcadaDeNossaSenhoraABranca-Norte.jpg'/>
 <p>Legenda: Campo e Calçada de Nossa Senhora a Branca- Norte.</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-42-CampoECalcadaDeNossaSenhoraABranca-Sul.jpg'/>
 <p>Legenda: Campo e Calçada de Nossa Senhora a Branca- Sul.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Pertencem ao prazo da casa n.º4. A casa n.º1 fica situada junto da fonte
+                    que está atrás da capela de N.Sra.</p>
+</div>
+<div>
+<p>Denominado «Casal e quinta de Sobrado».</p>
+<p>A enfiteuta sucedeu a António de Brito Freire,
+                    filho do Dr. Manuel Freire de Brito,
+                    da cidade de Braga.</p>
+<p>Pertencem a este prazo as casas n.º1 a 3 e 5 a 40 deste campo. No ano de 1506
+                    foi Senhor deste prazo o chantre de Braga, João Godis.</p>
+</div>
+<div>
+<p>Pertencem ao n.º4. A casa n.º7 esteve dividida em duas metades entre os anos 1636 a 1662.</p>
+</div>
+<div>
+<p>Os herdeiros de Maria de Oliveira, viúva, pagam 300 reis ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de António Correia, sombreireiro, casado com Natália Carvalho, pagam 300 reis ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de Manuel Rodrigues, sombreireiro, casado com Serafina João, pagam 400 reis e 1 galinha ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de Manuel Rodrigues, sombreireiro, casado com Serafina João, pagam 430 reis e 1 galinha ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de João Lopes, sapateiro, casado com Isabel Francisca, pagam 300 reis e 1 galinha ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de Manuel Pinheiro, da cidade de Lisboa, casado com Ana da Silva, pagam 600 reis e 1 galinha ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de Gonçalo Antunes, sombreireiro, casado com Maria Francisca, pagam 305 reis e 1 galinha ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros do Padre João Velho pagam 500 reis e 1 galinha ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de António da Silva, caldeireiro, casado com Margarida de Oliveira, pagam 300 reis ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de Francisco Martins, sombreireiro, casado com Gregória Fernandes, pagam 300 reis ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros do Padre Manuel Mendes pagam 390 reis ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de Estêvão Álvares, sombreireiro, casado com Maria Vaz, pagam 400 reis ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de Padre Manuel Pinheiro pagam 500 reis ao n.º4.</p>
+<p>Estas casas encontram-se unidas desde o ano de 1583.</p>
+</div>
+<div>
+<p>Os herdeiros de José Francisco, sombreireiro, pagam 440 reis ao n.º4.</p>
+<p>Estas casas encontram-se unidas desde o ano de 1583.</p>
+</div>
+<div>
+<p>Os herdeiros de António Dias, sombreireiro, casado com Apolónia Rodrigues, pagam 450 reis e 1 galinha ao n.º4.</p>
+<p>Encontram-se unidas desde o ano de 1583.</p>
+</div>
+<div>
+<p>Os herdeiros de Roque Martins Leite, casado com Maria Gomes, pagam 110 reis e 1 galinha ao n.º4.</p>
+<p>Encontram-se unidas desde o ano de 1543.</p>
+</div>
+<div>
+<p>Os herdeiros de António Barros, alfaiate, casado com Maria Soares, pagam 50 reis ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de Maria Ferreira, filha de Cristóvão Ferreira, pagam 50 reis ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de Geraldo Marques, casado com Luzia Francisca, pagam 50 reis ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de Inês Durães, solteira, pagam 35 reis ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de João Martins, sombreireiro, casado com Maria Pinto, pagam 40 reis ao n.º4.</p>
+<p>Esta casa encontra-se separada do n.º31 desde o ano de 1629.</p>
+</div>
+<div>
+<p>Os herdeiros de Álvaro Pinto, alfaiate, casado com Ângela Antónia, pagam 40 reis ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de Padre Teotónio de Sousa pagam 30 reis ao n.º4.</p>
+</div>
+<div>
+<p>Os herdeiros de Domingos Fernandes, serralheiro, casado com Isabel Gonçalves, pagam 20 reis e meio frangão ao n.º4.</p>
+<p>Encontram-se separadas da n.º34 desde o ano de 1619.</p>
+<p>A casa n.º40 confronta, do norte, com casa foreira à capela de D.Gonçalo Pereira.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1,2 e 3</p>
-<p>Descrição: Pertencem ao prazo da casa n.º4. A casa n.º1 fica situada junto da fonte
-                    que está atrás da </p>
+<p>Descrição: 
+                    Pertencem ao prazo da casa n.º4. A casa n.º1 fica situada junto da fonte
+                    que está atrás da capela de N.Sra.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 4</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
 <p>Foro: 1500 reis, 4 alqueires de trigo, 20 de paõ meado e 10 galinhas</p>
-<p>Descrição: Denominado </p>
+<p>Descrição: 
+                    Denominado «Casal e quinta de Sobrado».
+                    A enfiteuta sucedeu a António de Brito Freire,
+                    filho do Dr. Manuel Freire de Brito,
+                    da cidade de Braga.
+                    Pertencem a este prazo as casas n.º1 a 3 e 5 a 40 deste campo. No ano de 1506
+                    foi Senhor deste prazo o chantre de Braga, João Godis.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 5,6 e 7</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Pertencem ao n.º4. A casa n.º7 esteve dividida em duas metades entre os anos </p>
+<p>Descrição: 
+                    Pertencem ao n.º4. A casa n.º7 esteve dividida em duas metades entre os anos 1636 a 1662.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 8</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Maria de Oliveira, viúva, pagam 300 reis ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 9</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de António Correia, sombreireiro, casado com Natália Carvalho, pagam 300 reis ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 10</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Manuel Rodrigues, sombreireiro, casado com Serafina João, pagam 400 reis e 1 galinha ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 11</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Manuel Rodrigues, sombreireiro, casado com Serafina João, pagam 430 reis e 1 galinha ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 12</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de João Lopes, sapateiro, casado com Isabel Francisca, pagam 300 reis e 1 galinha ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 13</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Manuel Pinheiro, da cidade de Lisboa, casado com Ana da Silva, pagam 600 reis e 1 galinha ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 14</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Gonçalo Antunes, sombreireiro, casado com Maria Francisca, pagam 305 reis e 1 galinha ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 15</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros do </p>
+<p>Descrição: 
+                    Os herdeiros do Padre João Velho pagam 500 reis e 1 galinha ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 16</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de António da Silva, caldeireiro, casado com Margarida de Oliveira, pagam 300 reis ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 17</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Francisco Martins, sombreireiro, casado com Gregória Fernandes, pagam 300 reis ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 18</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros do </p>
+<p>Descrição: 
+                    Os herdeiros do Padre Manuel Mendes pagam 390 reis ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 19</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Estêvão Álvares, sombreireiro, casado com Maria Vaz, pagam 400 reis ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 20 e 21</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Padre Manuel Pinheiro pagam 500 reis ao n.º4.
+                    Estas casas encontram-se unidas desde o ano de 1583.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 22 e 23</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de José Francisco, sombreireiro, pagam 440 reis ao n.º4.
+                    Estas casas encontram-se unidas desde o ano de 1583.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 24 e 25</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de António Dias, sombreireiro, casado com Apolónia Rodrigues, pagam 450 reis e 1 galinha ao n.º4.
+                    Encontram-se unidas desde o ano de 1583.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 26 e 27</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Roque Martins Leite, casado com Maria Gomes, pagam 110 reis e 1 galinha ao n.º4.
+                    Encontram-se unidas desde o ano de 1543.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 28</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de António Barros, alfaiate, casado com Maria Soares, pagam 50 reis ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 29</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Maria Ferreira, filha de Cristóvão Ferreira, pagam 50 reis ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 30</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Geraldo Marques, casado com Luzia Francisca, pagam 50 reis ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 31</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Inês Durães, solteira, pagam 35 reis ao n.º4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 32</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de João Martins, sombreireiro, casado com Maria Pinto, pagam 40 reis ao n.º4.
+                    Esta casa encontra-se separada do n.º31 desde o ano de 1629.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 33</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Álvaro Pinto, alfaiate, casado com Ângela Antónia, pagam 40 reis ao n.º4.                    
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 34</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Padre Teotónio de Sousa pagam 30 reis ao n.º4.                   
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 35 a 40</p>
 <p>Enfiteuta: Ana Maria de Magalhães</p>
-<p>Descrição: Os herdeiros de </p>
+<p>Descrição: 
+                    Os herdeiros de Domingos Fernandes, serralheiro, casado com Isabel Gonçalves, pagam 20 reis e meio frangão ao n.º4.
+                    Encontram-se separadas da n.º34 desde o ano de 1619.
+                    A casa n.º40 confronta, do norte, com casa foreira à capela de D.Gonçalo Pereira.
+                </p>
+
+
+
 </div>
 </body>
 </html>
