--- a/TCP1/html/CangostaDaEscoura.html
+++ b/TCP1/html/CangostaDaEscoura.html
@@ -3,152 +3,425 @@
 <h1>Cangosta da Escoura</h1>
 <p>Número: 56</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-56-CangostaDaEscoura-norte.jpg'/>
 <p>Legenda: Cangosta da Escoura - vista norte.</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-56-CangostaDaEscoura-sul.jpg'/>
 <p>Legenda: Cangosta da Escoura - vista sul.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Pertence à casa n.º 9 da Rua das Palhotas, para onde tem frontaria e serventia principais.</p>
+</div>
+<div>
+<p>Porta de serventia do quintal da casa n.° 52 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Quintal da casa n.º 51 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Porta de serventia da casa n.º 50 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Porta de serventia do quintal da casa n.º 49 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Porta de serventia do quintal da casa n.º 48 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Porta de serventia do quintal da casa n.º 47 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Pertença do n.º 46 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Quintal da casa n.º 45 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Quintal da casa n.º 44 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Quintal da casa n.º 43 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Quintal da casa n.º 42 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Quintal da casa n.º 41 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Quintal da casa n.º 40 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Porta de serventia do quintal da casa n.º 39 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Porta de serventia do quintal da casa n.º 38 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Porta de serventia do quintal da casa n.º 37 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Porta de serventia do quintal da casa n.º 36 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Porta de serventia do quintal da casa n.º 35 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Quintal da casa n.º 34 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Porta de serventia dos quintais das casas n.ºs 32 e 33 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Porta de serventia do quintal da casa n.º 31 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Caminho de serventia das casas n.ºs 28, 29 e 30 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Pertence ao n.º 27 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Porta de serventia da casa n.º 26 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Quintal da casa n.° 25 da Rua dos Chãos de Cima.</p>
+</div>
+<div>
+<p>Pertence ao n.º 23 da Rua dos Chãos de Cima</p>
+</div>
+<div>
+<p>Pertence ao n.º 22 da Rua dos Chãos de Cima</p>
+</div>
+<div>
+<p>Denominado “Campo ou Cortelho da Escoura”. Foi pertença do prazo do casal de Infias antes de 1736.</p>
+</div>
+<div>
+<p>Pertence ao prazo do Campo ou Cortelho da Escoura.</p>
+</div>
+<div>
+<p>Pertence ao prazo do Campo ou Cortelho da Escoura.</p>
+</div>
+<div>
+<p>Pagam foro ao enfiteuta do prazo da 2.ª metade do casal do Lagarto. Os n.º 34 e 36 correspondem a quintais.</p>
+</div>
+<div>
+<p>Quintal da casa n.° 38.</p>
+</div>
+<div>
+<p>Pertence à casa n.° 10 da Rua das Palhotas, para onde tem a frontaria principal.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
-<p>Descrição: Pertence à casa n.º 9 da </p>
+<p>Descrição: 
+                    Pertence à casa n.º 9 da Rua das Palhotas, para onde tem frontaria e serventia principais.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
-<p>Descrição: Porta de serventia do quintal da casa n.° 52 da </p>
+<p>Descrição: 
+                    Porta de serventia do quintal da casa n.° 52 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 3</p>
-<p>Descrição: Quintal da casa n.º 51 da </p>
+<p>Descrição: 
+                    Quintal da casa n.º 51 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 4</p>
-<p>Descrição: Porta de serventia da casa n.º 50 da </p>
+<p>Descrição: 
+                    Porta de serventia da casa n.º 50 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 5</p>
-<p>Descrição: Porta de serventia do quintal da casa n.º 49 da </p>
+<p>Descrição: 
+                    Porta de serventia do quintal da casa n.º 49 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 6</p>
-<p>Descrição: Porta de serventia do quintal da casa n.º 48 da </p>
+<p>Descrição: 
+                    Porta de serventia do quintal da casa n.º 48 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 7</p>
-<p>Descrição: Porta de serventia do quintal da casa n.º 47 da </p>
+<p>Descrição: 
+                    Porta de serventia do quintal da casa n.º 47 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 8</p>
-<p>Descrição: Pertença do n.º 46 da </p>
+<p>Descrição: 
+                    Pertença do n.º 46 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 9</p>
-<p>Descrição: Quintal da casa n.º 45 da </p>
+<p>Descrição: 
+                    Quintal da casa n.º 45 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 10</p>
-<p>Descrição: Quintal da casa n.º 44 da </p>
+<p>Descrição: 
+                    Quintal da casa n.º 44 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 11</p>
-<p>Descrição: Quintal da casa n.º 43 da </p>
+<p>Descrição: 
+                    Quintal da casa n.º 43 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 12</p>
-<p>Descrição: Quintal da casa n.º 42 da </p>
+<p>Descrição: 
+                    Quintal da casa n.º 42 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 13</p>
-<p>Descrição: Quintal da casa n.º 41 da </p>
+<p>Descrição: 
+                    Quintal da casa n.º 41 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 14</p>
-<p>Descrição: Quintal da casa n.º 40 da </p>
+<p>Descrição: 
+                    Quintal da casa n.º 40 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 15</p>
-<p>Descrição: Porta de serventia do quintal da casa n.º 39 da </p>
+<p>Descrição: 
+                    Porta de serventia do quintal da casa n.º 39 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 16</p>
-<p>Descrição: Porta de serventia do quintal da casa n.º 38 da </p>
+<p>Descrição: 
+                    Porta de serventia do quintal da casa n.º 38 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 17</p>
-<p>Descrição: Porta de serventia do quintal da casa n.º 37 da </p>
+<p>Descrição: 
+                    Porta de serventia do quintal da casa n.º 37 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 18</p>
-<p>Descrição: Porta de serventia do quintal da casa n.º 36 da </p>
+<p>Descrição: 
+                    Porta de serventia do quintal da casa n.º 36 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 19</p>
-<p>Descrição: Porta de serventia do quintal da casa n.º 35 da </p>
+<p>Descrição: 
+                    Porta de serventia do quintal da casa n.º 35 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 20</p>
-<p>Descrição: Quintal da casa n.º 34 da </p>
+<p>Descrição: 
+                    Quintal da casa n.º 34 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 21</p>
-<p>Descrição: Porta de serventia dos quintais das casas n.ºs 32 e 33 da </p>
+<p>Descrição: 
+                    Porta de serventia dos quintais das casas n.ºs 32 e 33 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 22</p>
-<p>Descrição: Porta de serventia do quintal da casa n.º 31 da </p>
+<p>Descrição: 
+                    Porta de serventia do quintal da casa n.º 31 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 23</p>
-<p>Descrição: Caminho de serventia das casas n.ºs 28, 29 e 30 da </p>
+<p>Descrição: 
+                    Caminho de serventia das casas n.ºs 28, 29 e 30 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 24</p>
-<p>Descrição: Pertence ao n.º 27 da </p>
+<p>Descrição: 
+                    Pertence ao n.º 27 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 25</p>
-<p>Descrição: Porta de serventia da casa n.º 26 da </p>
+<p>Descrição: 
+                    Porta de serventia da casa n.º 26 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 26</p>
-<p>Descrição: Quintal da casa n.° 25 da </p>
+<p>Descrição: 
+                    Quintal da casa n.° 25 da Rua dos Chãos de Cima.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 27</p>
-<p>Descrição: Pertence ao n.º 23 da </p>
+<p>Descrição: 
+                    Pertence ao n.º 23 da Rua dos Chãos de Cima
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 28</p>
-<p>Descrição: Pertence ao n.º 22 da </p>
+<p>Descrição: 
+                    Pertence ao n.º 22 da Rua dos Chãos de Cima
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 29</p>
 <p>Enfiteuta: Pedro Francisco Rodrigues, da rua dos Chãos de Cima, c.c. Maria de Matos Vieira</p>
 <p>Foro: 100 reis e 1 alqueire de trigo</p>
-<p>Descrição: Denominado “Campo ou Cortelho da Escoura”. Foi pertença do prazo do </p>
+<p>Descrição: 
+                    Denominado “Campo ou Cortelho da Escoura”. Foi pertença do prazo do casal de Infias antes de 1736.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 30</p>
-<p>Descrição: Pertence ao prazo do Campo ou Cortelho da Escoura.</p>
+<p>Descrição: 
+                    Pertence ao prazo do Campo ou Cortelho da Escoura.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 31</p>
-<p>Descrição: Pertence ao prazo do Campo ou Cortelho da Escoura.</p>
+<p>Descrição: 
+                    Pertence ao prazo do Campo ou Cortelho da Escoura.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 32 a 36</p>
 <p>Enfiteuta: Isabel Maria da Silva, viúva do Dr. Santos de Araújo Alves, enfiteuta principal do prazo da 1.ª metade do casal do Lagarto.</p>
-<p>Descrição: Pagam foro ao enfiteuta do prazo da 2.ª metade do </p>
+<p>Descrição: 
+                    Pagam foro ao enfiteuta do prazo da 2.ª metade do casal do Lagarto. Os n.º 34 e 36 correspondem a quintais.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 37</p>
-<p>Descrição: Quintal da casa n.° 38.</p>
+<p>Descrição: 
+                    Quintal da casa n.° 38.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 38</p>
-<p>Descrição: Pertence à casa n.° 10 da </p>
+<p>Descrição: 
+                    Pertence à casa n.° 10 da Rua das Palhotas, para onde tem a frontaria principal.
+                </p>
+
+
+
 </div>
 </body>
 </html>
