--- a/TCP1/html/EstradaDeReal.html
+++ b/TCP1/html/EstradaDeReal.html
@@ -3,26 +3,53 @@
 <h1>Estrada de Real</h1>
 <p>Número: 57</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-57-EstradaDeReal-norte.jpg'/>
 <p>Legenda: Estrada de Real - norte.</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-57-EstradaDeReal-sul.jpg'/>
 <p>Legenda: Estrada de Real - sul.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Campo do prazo da  Quinta da Cónega(freguesia de S.Pedro de Maximinos).</p>
+</div>
+<div>
+<p>Pertencem à Quinta da Cónega, a cujo enfiteuta se paga foro. O nº17 confronta, do poente, com o caminho que vai para a  Quinta do Real.</p>
+<p>O nº18, confronta, do poente, com o caminho que vai junto da Curutelapara a cangosta do Pópulo.</p>
+</div>
+<div>
+<p>Corresponde a um campo do prazo da  Quinta da Cónega. Confronta, do nascente, com a casa nº22 da Rua da Cónega.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
-<p>Descrição: Campo do prazo da  </p>
+<p>Descrição: 
+                Campo do prazo da  Quinta da Cónega(freguesia de S.Pedro de Maximinos).
+            </p>
+
+
+
 </div>
 <div>
 <p>Número: 2 a 20</p>
 <p>Enfiteuta: Sebastião de Faria Gusmão, enfiteuta principa da Quinta da Cónega.</p>
-<p>Descrição: Pertencem à </p>
+<p>Descrição: 
+                Pertencem à Quinta da Cónega, a cujo enfiteuta se paga foro. O nº17 confronta, do poente, com o caminho que vai para a  Quinta do Real.
+                O nº18, confronta, do poente, com o caminho que vai junto da Curutelapara a cangosta do Pópulo.
+            </p>
+
+
+
 </div>
 <div>
 <p>Número: 21</p>
-<p>Descrição: Corresponde a um campo do prazo da  </p>
+<p>Descrição: 
+                Corresponde a um campo do prazo da  Quinta da Cónega. Confronta, do nascente, com a casa nº22 da Rua da Cónega.
+            </p>
+
+
+
 </div>
 </body>
 </html>
