--- a/TCP1/html/RuaDaOliveira.html
+++ b/TCP1/html/RuaDaOliveira.html
@@ -3,103 +3,340 @@
 <h1>Rua Da Oliveira</h1>
 <p>Número: 51</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-51-RuaDaOliveira-a.jpg'/>
 <p>Legenda: Rua da Oliveira - Vista nascente.</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-51-RuaDaOliveira-b.jpg'/>
 <p>Legenda: Rua da Oliveira - Vista poente.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Custódio Dias, vendeiro, casado com Francisca Teresa, 
+                        paga 1000 reis ao enfiteuta do prazo do 
+                        casal dos Chãos ou Quinteiro, conforme o 
+                        subemprazamento de 1739.</p>
+<p>Confronta, do sul, com o chão n.° 16 da Praça do Gavião.</p>
+</div>
+<div>
+<p>Marcos Lopes, branqueador, casado com Luísa Mendes, 
+                        paga 1200 reis ao enfiteuta do prazo 
+                        do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1725.</p>
+</div>
+<div>
+<p>Diogo Fernandes, branqueador, casado com 
+                        Maria de Almeida, paga 1200 reis ao enfiteuta 
+                        do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme a subemprazamento de 1725.</p>
+</div>
+<div>
+<p>João da Costa, viúvo, alfaiate, paga 1200 reis 
+                        ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1726.</p>
+</div>
+<div>
+<p>João Dias, abridor de guarnição de espada, 
+                        casado com Mariana Carvalho, paga 1200 reis 
+                        ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1725.</p>
+</div>
+<div>
+<p>Manuel de Barros, alfaiate, casado com Maria da Ascensão, 
+                        paga 1200 reis ao enfiteuta do 
+                        prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1738.</p>
+</div>
+<div>
+<p>Bento de Magalhães, casado com Mariana Ribeiro, 
+                        paga 2760 reis ao enfiteuta do prazo 
+                        do casal dos Chãos ou Quinteiro.</p>
+<p>Encontram-se unidas desde o ano de 1738.</p>
+</div>
+<div>
+<p>Paga foro ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
+</div>
+<div>
+<p>Chãos de casa do prazo do casal dos Chãos ou Quinteiro. 
+                        O n.° 17 confronta, do norte, com o «chão» da futura travessa para a Rua de S. Barnabé.</p>
+</div>
+<div>
+<p>Chãos de casa do prazo do casal dos Chãos ou Quinteiro.</p>
+<p>O chão n.º 18 confronta, do norte, com o 
+                        caminho que vai para S. Vicente.</p>
+</div>
+<div>
+<p>Pertencem ao casal dos Chãos ou Quinteiro, a 
+                        cujo enfiteuta se paga foro. Nos livros dos 
+                        prazos do cabido não se encontram escrituras de 
+                        subemprazamento.</p>
+</div>
+<div>
+<p>Brites de Barros, viúva de Tomé de Magalhães, 
+                        paga 1200 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1737.</p>
+</div>
+<div>
+<p>Caetano Gonçalves, serralheiro, casado, paga 
+                        1440 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1738.</p>
+<p>Esteve unida, entre os anos de 1729 e 1738, à casa n.° 31.</p>
+</div>
+<div>
+<p>Custódio Ferreira, casado com Joana Fernandes, 
+                        paga 1200 reis ao enfiteuta do prazo 
+                        do casal dos Chãos ou Quinteiro, conforme o 
+                        subemprazamento de 1745.</p>
+</div>
+<div>
+<p>José Gomes de Andrade, pentieiro, paga 1200 
+                        reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1729.</p>
+</div>
+<div>
+<p>António Gomes, cardador, casado com Rosa da Silva, 
+                        paga (por cada uma destas casas), 1200 
+                        reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, conforme os subemprazamentos 
+                        feitos em 1728 e 1725.</p>
+</div>
+<div>
+<p>João Fernandes, sombreireiro, casado com 
+                        Amónia Francisca, paga 1200 reis ao enfiteuta 
+                        do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1725.</p>
+</div>
+<div>
+<p>Pedro Gomes, casado com Luísa Maria, paga 
+                        2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1745.</p>
+<p>Confronta, do sul, com a casa n.° 17 da Praça do Gavião.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Custódio Dias, vendeiro, casado com Francisca Teresa, 
+                        paga 1000 reis ao enfiteuta do prazo do 
+                        casal dos Chãos ou Quinteiro, conforme o 
+                        subemprazamento de 1739.
+                    Confronta, do sul, com o chão n.° 16 da Praça do Gavião.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Marcos Lopes, branqueador, casado com Luísa Mendes, 
+                        paga 1200 reis ao enfiteuta do prazo 
+                        do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1725.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 3</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Diogo Fernandes, branqueador, casado com 
+                        Maria de Almeida, paga 1200 reis ao enfiteuta 
+                        do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme a subemprazamento de 1725.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 4</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    João da Costa, viúvo, alfaiate, paga 1200 reis 
+                        ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1726.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 5</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    João Dias, abridor de guarnição de espada, 
+                        casado com Mariana Carvalho, paga 1200 reis 
+                        ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1725.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 6</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Manuel de Barros, alfaiate, casado com Maria da Ascensão, 
+                        paga 1200 reis ao enfiteuta do 
+                        prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1738.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 7 e 8</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Bento de Magalhães, casado com Mariana Ribeiro, 
+                        paga 2760 reis ao enfiteuta do prazo 
+                        do casal dos Chãos ou Quinteiro.
+                    Encontram-se unidas desde o ano de 1738.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 9</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: Paga foro ao enfiteuta do prazo do </p>
+<p>Descrição: 
+                    Paga foro ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 10 a 17</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: Chãos de casa do prazo do </p>
+<p>Descrição: 
+                    Chãos de casa do prazo do casal dos Chãos ou Quinteiro. 
+                        O n.° 17 confronta, do norte, com o «chão» da futura travessa para a Rua de S. Barnabé.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 18 a 22</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: Chãos de casa do prazo do </p>
+<p>Descrição: 
+                    Chãos de casa do prazo do casal dos Chãos ou Quinteiro.
+                    O chão n.º 18 confronta, do norte, com o 
+                        caminho que vai para S. Vicente.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 23 a 28</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: Pertencem ao </p>
+<p>Descrição: 
+                    Pertencem ao casal dos Chãos ou Quinteiro, a 
+                        cujo enfiteuta se paga foro. Nos livros dos 
+                        prazos do cabido não se encontram escrituras de 
+                        subemprazamento.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 29</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Brites de Barros, viúva de Tomé de Magalhães, 
+                        paga 1200 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1737.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 30</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Caetano Gonçalves, serralheiro, casado, paga 
+                        1440 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1738.
+                    Esteve unida, entre os anos de 1729 e 1738, à casa n.° 31.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 31</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Custódio Ferreira, casado com Joana Fernandes, 
+                        paga 1200 reis ao enfiteuta do prazo 
+                        do casal dos Chãos ou Quinteiro, conforme o 
+                        subemprazamento de 1745.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 32</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    José Gomes de Andrade, pentieiro, paga 1200 
+                        reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1729.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 33 e 34</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    António Gomes, cardador, casado com Rosa da Silva, 
+                        paga (por cada uma destas casas), 1200 
+                        reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, conforme os subemprazamentos 
+                        feitos em 1728 e 1725.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 35</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    João Fernandes, sombreireiro, casado com 
+                        Amónia Francisca, paga 1200 reis ao enfiteuta 
+                        do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1725.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 36</p>
 <p>Enfiteuta: D. Agostinho Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Pedro Gomes, casado com Luísa Maria, paga 
+                        2000 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1745.
+                    Confronta, do sul, com a casa n.° 17 da Praça do Gavião.
+                </p>
+
+
+
 </div>
 </body>
 </html>
