--- a/TCP1/html/RuaDeInfias.html
+++ b/TCP1/html/RuaDeInfias.html
@@ -3,170 +3,475 @@
 <h1>Rua de Infias</h1>
 <p>Número: 55</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-55-RuaDeInfias-norte.jpg'/>
 <p>Legenda: Rua de Infias - vista norte.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Antiga cabeça do prazo, denominado, 1.ª metade do casal do Lagarto. Pertencem a este prazo os n.ºs 1 a 35 da 
+                        Rua de Infias.</p>
+</div>
+<div>
+<p>Antónia Soares, casada com Luís Francisco de Paiva, branqueador, 
+                        paga 2000 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>José de Freitas, cabeiro, casado com Maria da Silva, paga 2000 reis 
+                        ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>João Dias, espingardeiro, casado com Mariana da Silva, paga 2000 
+                        reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Manuel de Araújo, pedreiro, casado com Domingas Fernandes, paga 
+                        2000 reis ao enfiteuta ao prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Manuel Pires, pedreiro, casado com Teresa Francisca, paga 2000 
+                        reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>A casa é foreira ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Pertence ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>José Carlos, lanterneiro, casado com Maria Teresa, paga 4000 
+                        reis por este chão de casa. Foi subemprazado à face do prazo da l.ª metade do casal do Lagarto.
+                    </p>
+</div>
+<div>
+<p>Corresponde a um portal de serventia do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Pertence ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Corresponde a um chão de casa, pertença do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Pertence ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>João de Araújo, faulas, ferreiro, casado com Maria de Aguiar, 
+                        paga 1000 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>António Dias da Silva, da freguesia de S. Pedro d'Este, casado com Isabel
+                        Duarte, paga 850 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Manuel Francisco, carpinteiro, casado com Antónia Teixeira, paga 
+                        1300 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Maria Carvalho, viúva de Bento Correia, pintor, paga 400 reis 
+                        ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Manuel de Araújo, sombreireiro, casado com Antónia Ribeiro, paga 
+                        850 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>O Padre Cristóvão Francisco paga 425 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Manuel de Araújo, combreireiro, casado com Antónia Ribeiro, paga 
+                        425 reis ao enfeiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>António Ferreira Torres, ourives, paga 850 reis ao enfiteuta do prazo da l.ª metade do 
+                        casal do Lagarto.</p>
+</div>
+<div>
+<p>Bernarda Ferreira, viúva de José Francisco, cutileiro, paga 
+                        400 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Manuel Marques Pereira, casado com Teresa Maria, paga 1300 reis 
+                        ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>João Pereira do Lago, casado com D. Marcelina de Araújo Rocha, 
+                        paga 400 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Paga 2100 reis ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Pedro Fernandes da Silva, casado com Domingas das Neves, 
+                        paga 800 reis ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Paga foro ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Pedro Fernandes da Silva, casado com Domingas das Neves, paga 
+                        800 reis ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Francisco de Barros, sombreireiro, casado com Natália Fernandes, 
+                        paga 360 reis ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Francisco Cardoso, viúvo, paga, por cada uma das casas, 620 reis ao enfiteuta do prazo da 
+                        1.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Pedro Vieira, barbeiro, casado com Teresa Francisca, paga 1000 
+                        reis ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.</p>
+</div>
+<div>
+<p>Jácome de Matos, casado com Sebastiana Maria, paga 800 reis ao 
+                        enfiteuta do prazo da 1.ª metade do casal do Lagarto. Confronta, do nascente, com casa foreira à Misericórdia.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Isabel Maria da Silva, viúva do Dr. Santos de Araújo Alves. Dezembargador de Braga</p>
 <p>Foro: 200 reis, 18 alqueires de pão meado e 2 galinhas</p>
-<p>Descrição: Antiga cabeça do prazo, denominado, 1.ª metade do </p>
+<p>Descrição: 
+                    Antiga cabeça do prazo, denominado, 1.ª metade do casal do Lagarto. Pertencem a este prazo os n.ºs 1 a 35 da 
+                        Rua de Infias.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Antónia Soares, casada com Luís Francisco de Paiva, branqueador, 
+                        paga 2000 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 3</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    José de Freitas, cabeiro, casado com Maria da Silva, paga 2000 reis 
+                        ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 4</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    João Dias, espingardeiro, casado com Mariana da Silva, paga 2000 
+                        reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 5</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Manuel de Araújo, pedreiro, casado com Domingas Fernandes, paga 
+                        2000 reis ao enfiteuta ao prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 6</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Manuel Pires, pedreiro, casado com Teresa Francisca, paga 2000 
+                        reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 7</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: A casa é foreira ao enfiteuta do prazo da l.ª metade do </p>
+<p>Descrição: 
+                    A casa é foreira ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 8</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: Pertence ao enfiteuta do prazo da l.ª metade do </p>
+<p>Descrição: 
+                    Pertence ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 9</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    José Carlos, lanterneiro, casado com Maria Teresa, paga 4000 
+                        reis por este chão de casa. Foi subemprazado à face do prazo da l.ª metade do casal do Lagarto.
+                    
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 10</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: Corresponde a um portal de serventia do prazo da l.ª metade do </p>
+<p>Descrição: 
+                    Corresponde a um portal de serventia do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 11</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: Pertence ao enfiteuta do prazo da l.ª metade do </p>
+<p>Descrição: 
+                    Pertence ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 12</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: Corresponde a um chão de casa, pertença do prazo da l.ª metade do </p>
+<p>Descrição: 
+                    Corresponde a um chão de casa, pertença do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 13</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: Pertence ao enfiteuta do prazo da l.ª metade do </p>
+<p>Descrição: 
+                    Pertence ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 14</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    João de Araújo, faulas, ferreiro, casado com Maria de Aguiar, 
+                        paga 1000 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 15</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    António Dias da Silva, da freguesia de S. Pedro d'Este, casado com Isabel
+                        Duarte, paga 850 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 16</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Manuel Francisco, carpinteiro, casado com Antónia Teixeira, paga 
+                        1300 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 17</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Maria Carvalho, viúva de Bento Correia, pintor, paga 400 reis 
+                        ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 18</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Manuel de Araújo, sombreireiro, casado com Antónia Ribeiro, paga 
+                        850 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 19</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: O </p>
+<p>Descrição: 
+                    O Padre Cristóvão Francisco paga 425 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 20</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Manuel de Araújo, combreireiro, casado com Antónia Ribeiro, paga 
+                        425 reis ao enfeiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 21</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    António Ferreira Torres, ourives, paga 850 reis ao enfiteuta do prazo da l.ª metade do 
+                        casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 22</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Bernarda Ferreira, viúva de José Francisco, cutileiro, paga 
+                        400 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 23</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Manuel Marques Pereira, casado com Teresa Maria, paga 1300 reis 
+                        ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 24</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    João Pereira do Lago, casado com D. Marcelina de Araújo Rocha, 
+                        paga 400 reis ao enfiteuta do prazo da l.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 25, 26 e 27</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: Paga 2100 reis ao enfiteuta do prazo da 1.ª metade do </p>
+<p>Descrição: 
+                    Paga 2100 reis ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 28</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Pedro Fernandes da Silva, casado com Domingas das Neves, 
+                        paga 800 reis ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 29</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: Paga foro ao enfiteuta do prazo da 1.ª metade do </p>
+<p>Descrição: 
+                    Paga foro ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 30</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Pedro Fernandes da Silva, casado com Domingas das Neves, paga 
+                        800 reis ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 31</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Francisco de Barros, sombreireiro, casado com Natália Fernandes, 
+                        paga 360 reis ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 32 e 33</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Francisco Cardoso, viúvo, paga, por cada uma das casas, 620 reis ao enfiteuta do prazo da 
+                        1.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 34</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Pedro Vieira, barbeiro, casado com Teresa Francisca, paga 1000 
+                        reis ao enfiteuta do prazo da 1.ª metade do casal do Lagarto.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 35</p>
 <p>Enfiteuta: Vid. casa n.º1.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Jácome de Matos, casado com Sebastiana Maria, paga 800 reis ao 
+                        enfiteuta do prazo da 1.ª metade do casal do Lagarto. Confronta, do nascente, com casa foreira à Misericórdia.
+                </p>
+
+
+
 </div>
 </body>
 </html>
