--- a/TCP1/html/RuaDeMaximinos.html
+++ b/TCP1/html/RuaDeMaximinos.html
@@ -3,18 +3,141 @@
 <h1>Rua de Maximinos</h1>
 <p>Número: 22</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-22-RuaDeMaximinos-norte.jpg'/>
 <p>Legenda: Rua de Maximinos - norte.</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-22-RuaDeMaximinos-sul.jpg'/>
 <p>Legenda: Rua de Maximinos - sul.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Corresponde ao n.º 26 da Praça do Pão.</p>
+</div>
+<div>
+<p>O enfiteuta é filho de Pedro Barreto de
+                            Meneses e de sua mulher D. Maria
+                            Barreto. Foram unidas em 1508. A casa n.º 4 é de
+                        herdade dizíma a Deus e paga censo.</p>
+</div>
+<div>
+<p>O enfiteuta é filho de Pedro Barreto de
+                            Meneses e de sua mulher D. Maria
+                            Barreto. Foram unidas em 1508. A casa n.º 4 é de
+                        herdade dizíma a Deus e paga censo.</p>
+</div>
+<div>
+<p>O enfiteuta é filho de Pedro Barreto de
+                            Meneses e de sua mulher D. Maria
+                            Barreto. Foram unidas em 1508. A casa n.º 4 é de
+                        herdade dizíma a Deus e paga censo.</p>
+</div>
+<div>
+<p>O enfiteuta comprou este prazo a D. Maria Barreto
+                            de Meneses.</p>
+</div>
+<div>
+<p>A casa pertenceu a Pedro Gonçalves
+                            Álvares.</p>
+</div>
+<div>
+<p>A este prazo pertence o n.º 8 da Rua das Chagas.</p>
+</div>
+<div>
+<p>O censo é pago por Domingos de
+                        Oliveira.</p>
+</div>
+<div>
+<p>O censo é pago por Domingos de
+                        Oliveira.</p>
+</div>
+<div>
+<p>Confronta, do nascente, com a Rua Verde.</p>
+</div>
+<div>
+<p>O enfiteuta herdara esta casa de seu pai, Pedro de
+                            Oliveira.</p>
+</div>
+<div>
+<p>Esta casa pertencia a Lic. Francisco Gomes de
+                            Brito.</p>
+</div>
+<div>
+<p>O enfiteuta herdara esta casa de seu sogro, José
+                            de Oliveira.</p>
+</div>
+<div>
+<p>A casa é foreira à comenda de Lomar. O censo é pago pelo Padre Feliciano Barbosa, congregado.</p>
+</div>
+<div>
+<p>A casa possui, da parte poente, frontaria e serventia pela
+                        Vielinha.</p>
+</div>
+<div>
+<p>Confronta, do nascente, com a casa dizíma a Deus.</p>
+</div>
+<div>
+<p>O enfiteuta foi filho e herdeiro de Domingos de
+                            Almeida.</p>
+<p>Confronta, do nascente, com casa foreira à cororaria e, do poent, com casa
+                        dizíma a Deus.</p>
+</div>
+<div>
+<p>Encontra-se unida, numa só morada, com uma casa foreira à
+                        cororaria.</p>
+<p>Confronta, do nascente, com a Rua dos Sapateiros e, do
+                        poente, com casa foreira à cororaria da Sé de Braga.</p>
+<p>O censo é pago por João
+                        Teixeira.</p>
+</div>
+<div>
+<p>A enfiteuta é filha de Custódio da
+                            Silva, sapateiro, e de sua mulher, Paula Ribeiro.</p>
+<p>Confronta, de poente, com casa dizíma a Deus e com casas do cabido e, do
+                        norte, com parte da mesma casa, foreira à cororaria.</p>
+</div>
+<div>
+<p>O enfiteuta foi filho e herdeiro de José
+                            Machado, sapateiro e de sua mulher, Catarina Pereira.</p>
+</div>
+<div>
+<p>Confronta, do nascente, com casa de herdade dizíma a Deus.</p>
+<p>O censo é pago por Marquesa
+                        Maria.</p>
+</div>
+<div>
+<p>Confronta, do poente, com casa de herdade dizíma a Deus. Paga 45 reis de
+                        censo ao Hospital de S. Marcos e 70
+                        reis à xonfraria de Santiago.</p>
+</div>
+<div>
+<p>Esta casa pertenceu a Baltazar
+                            Fernandes. Era do património do Padre
+                            Manuel de Matos.</p>
+</div>
+<div>
+<p>O enfiteuta foi filho de José Lopes,
+                        armador. Entre os anos de 1528 e 1633 esteve unida
+                        à casa n.º 27.</p>
+</div>
+<div>
+<p>Esta casa fora de Francisco
+                        Ferreira.</p>
+</div>
+<div>
+<p>Encontram-se unidas, num só prazo, desde o ano de
+                        1680.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Senado da Câmara de Braga</p>
-<p>Descrição: Corresponde ao n.º 26 da </p>
+<p>Descrição: 
+                    Corresponde ao n.º 26 da Praça do Pão.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
@@ -25,36 +148,77 @@
 <p>Número: 3</p>
 <p>Enfiteuta: António Brreto de Meneses</p>
 <p>Foro: 860 reis e 4 galinhas</p>
-<p>Descrição: O enfiteuta é filho de </p>
+<p>Descrição: 
+                    O enfiteuta é filho de Pedro Barreto de
+                            Meneses e de sua mulher D. Maria
+                            Barreto. Foram unidas em 1508. A casa n.º 4 é de
+                        herdade dizíma a Deus e paga censo.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 4</p>
 <p>Foro: 71 reis e meio (censo)</p>
-<p>Descrição: O enfiteuta é filho de </p>
+<p>Descrição: 
+                    O enfiteuta é filho de Pedro Barreto de
+                            Meneses e de sua mulher D. Maria
+                            Barreto. Foram unidas em 1508. A casa n.º 4 é de
+                        herdade dizíma a Deus e paga censo.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 5</p>
 <p>Enfiteuta: António Barreto de Meneses</p>
 <p>Foro: 730 reis e 2 galinhas</p>
-<p>Descrição: O enfiteuta é filho de </p>
+<p>Descrição: 
+                    O enfiteuta é filho de Pedro Barreto de
+                            Meneses e de sua mulher D. Maria
+                            Barreto. Foram unidas em 1508. A casa n.º 4 é de
+                        herdade dizíma a Deus e paga censo.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 6</p>
 <p>Enfiteuta: Domingos Ferreira, violeiro</p>
 <p>Foro: 800 reis e 2 galinhas</p>
-<p>Descrição: O enfiteuta comprou este prazo a </p>
+<p>Descrição: 
+                    O enfiteuta comprou este prazo a D. Maria Barreto
+                            de Meneses.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 7</p>
 <p>Enfiteuta: Miguel de Araújo Barreto</p>
 <p>Foro: 500 reis e 2 galinhas</p>
-<p>Descrição: A casa pertenceu a </p>
+<p>Descrição: 
+                    A casa pertenceu a Pedro Gonçalves
+                            Álvares.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 8</p>
 <p>Enfiteuta: D. Inácia Gomes da Costa</p>
 <p>Foro: 1200 reis, 2 capões e 2 galinhas</p>
-<p>Descrição: A este prazo pertence o n.º 8 da </p>
+<p>Descrição: 
+                    A este prazo pertence o n.º 8 da Rua das Chagas.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 9</p>
@@ -64,30 +228,59 @@
 <div>
 <p>Número: 10</p>
 <p>Foro: 13 reis e 5 pretos (de censo)</p>
-<p>Descrição: O censo é pago por </p>
+<p>Descrição: 
+                    O censo é pago por Domingos de
+                        Oliveira.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 11</p>
 <p>Foro: 94 reis e 5 pretos (de censo)</p>
-<p>Descrição: O censo é pago por </p>
+<p>Descrição: 
+                    O censo é pago por Domingos de
+                        Oliveira.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 12</p>
 <p>Enfiteuta: Constantino Teixeira, cirgueiro, casado com Custódia de Sousa</p>
 <p>Foro: 650 reis e 4 galinhas</p>
-<p>Descrição: Confronta, do nascente, com a </p>
+<p>Descrição: 
+                    Confronta, do nascente, com a Rua Verde.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 13</p>
 <p>Enfiteuta: Alexandre de Oliveira</p>
 <p>Foro: 340 reis e 2 galinhas</p>
-<p>Descrição: O enfiteuta herdara esta casa de seu pai, </p>
+<p>Descrição: 
+                    O enfiteuta herdara esta casa de seu pai, Pedro de
+                            Oliveira.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 14</p>
 <p>Enfiteuta: Félix Francisco Braga, casado com Ana Lopes</p>
 <p>Foro: 300 reis e 2 capões</p>
-<p>Descrição: Esta casa pertencia a </p>
+<p>Descrição: 
+                    Esta casa pertencia a Lic. Francisco Gomes de
+                            Brito.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 15</p>
@@ -98,67 +291,139 @@
 <p>Número: 16</p>
 <p>Enfiteuta: José de Matos, mercador</p>
 <p>Foro: 350 reis e 2 galinhas</p>
-<p>Descrição: O enfiteuta herdara esta casa de seu sogro, </p>
+<p>Descrição: 
+                    O enfiteuta herdara esta casa de seu sogro, José
+                            de Oliveira.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 17</p>
 <p>Foro: 30 reis (de censo)</p>
-<p>Descrição: A casa é foreira à comenda de Lomar. O censo é pago pelo </p>
+<p>Descrição: 
+                    A casa é foreira à comenda de Lomar. O censo é pago pelo Padre Feliciano Barbosa, congregado.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 18</p>
 <p>Enfiteuta: Os herdeiros do Lic. Alexandre Dias Rebelo</p>
 <p>Foro: 520 reis e 2 capões</p>
-<p>Descrição: A casa possui, da parte poente, frontaria e serventia pela
-                        Vielinha.</p>
+<p>Descrição: 
+                    A casa possui, da parte poente, frontaria e serventia pela
+                        Vielinha.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 19</p>
 <p>Enfiteuta: Custódia Dantas, viúva de Domingos de Araújo, Batefolha</p>
 <p>Foro: 480 reis e 2 galinhas</p>
-<p>Descrição: Confronta, do nascente, com a casa dizíma a Deus.</p>
+<p>Descrição: 
+                    Confronta, do nascente, com a casa dizíma a Deus.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 20</p>
 <p>Enfiteuta: Padre Manuel de Almeida</p>
 <p>Foro: 480 reis e 2 galinhas</p>
-<p>Descrição: O enfiteuta foi filho e herdeiro de </p>
+<p>Descrição: 
+                    O enfiteuta foi filho e herdeiro de Domingos de
+                            Almeida.
+                    Confronta, do nascente, com casa foreira à cororaria e, do poent, com casa
+                        dizíma a Deus.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 21</p>
 <p>Foro: 16 reis e 8 pretos (de censo)</p>
-<p>Descrição: Encontra-se unida, numa só morada, com uma casa foreira à
-                        cororaria.</p>
+<p>Descrição: 
+                    Encontra-se unida, numa só morada, com uma casa foreira à
+                        cororaria.
+                    Confronta, do nascente, com a Rua dos Sapateiros e, do
+                        poente, com casa foreira à cororaria da Sé de Braga.
+                    O censo é pago por João
+                        Teixeira.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 22</p>
 <p>Enfiteuta: Quitéria Maria</p>
 <p>Foro: 320 reis e 8 pretos (de censo)</p>
-<p>Descrição: A enfiteuta é filha de </p>
+<p>Descrição: 
+                    A enfiteuta é filha de Custódio da
+                            Silva, sapateiro, e de sua mulher, Paula Ribeiro.
+                    Confronta, de poente, com casa dizíma a Deus e com casas do cabido e, do
+                        norte, com parte da mesma casa, foreira à cororaria.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 23</p>
 <p>Enfiteuta: José dos Reis</p>
 <p>Foro: 220 reis e 2 galinhas</p>
-<p>Descrição: O enfiteuta foi filho e herdeiro de </p>
+<p>Descrição: 
+                    O enfiteuta foi filho e herdeiro de José
+                            Machado, sapateiro e de sua mulher, Catarina Pereira.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 24</p>
 <p>Foro: 81 reis (de censo)</p>
-<p>Descrição: Confronta, do nascente, com casa de herdade dizíma a Deus.</p>
+<p>Descrição: 
+                    Confronta, do nascente, com casa de herdade dizíma a Deus.
+                    O censo é pago por Marquesa
+                        Maria.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 25</p>
 <p>Enfiteuta: Padre João Lopes, músico</p>
 <p>Foro: 430 reis e 2 galinhas</p>
-<p>Descrição: Confronta, do poente, com casa de herdade dizíma a Deus. Paga 45 reis de
-                        censo ao </p>
+<p>Descrição: 
+                    Confronta, do poente, com casa de herdade dizíma a Deus. Paga 45 reis de
+                        censo ao Hospital de S. Marcos e 70
+                        reis à xonfraria de Santiago.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 26</p>
 <p>Enfiteuta: Padre Manuel de Matos</p>
 <p>Foro: 360 reis e 2 galinhas</p>
-<p>Descrição: Esta casa pertenceu a </p>
+<p>Descrição: 
+                    Esta casa pertenceu a Baltazar
+                            Fernandes. Era do património do Padre
+                            Manuel de Matos.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 27</p>
@@ -169,13 +434,26 @@
 <p>Número: 28</p>
 <p>Enfiteuta: Padre João Lopes</p>
 <p>Foro: 420 reis e 1 capão</p>
-<p>Descrição: O enfiteuta foi filho de </p>
+<p>Descrição: 
+                    O enfiteuta foi filho de José Lopes,
+                        armador. Entre os anos de 1528 e 1633 esteve unida
+                        à casa n.º 27.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 29</p>
 <p>Enfiteuta: Domingos Francisco, sapateiro</p>
 <p>Foro: 450 reis e 2 galinhas</p>
-<p>Descrição: Esta casa fora de </p>
+<p>Descrição: 
+                    Esta casa fora de Francisco
+                        Ferreira.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 30</p>
@@ -186,8 +464,13 @@
 <p>Número: 31 e 32</p>
 <p>Enfiteuta: O irmão do Lic. Francisco Ferreira de Araújo</p>
 <p>Foro: 780 reis e 4 galinhas</p>
-<p>Descrição: Encontram-se unidas, num só prazo, desde o ano de
-                        </p>
+<p>Descrição: 
+                    Encontram-se unidas, num só prazo, desde o ano de
+                        1680.
+                </p>
+
+
+
 </div>
 </body>
 </html>
