--- a/TCP1/html/RuaDeSGoncalo.html
+++ b/TCP1/html/RuaDeSGoncalo.html
@@ -3,108 +3,359 @@
 <h1>Rua de S. Gonçalo</h1>
 <p>Número: 49</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-49-RuaDeSGoncalo-a.jpg'/>
 <p>Legenda: Rua de S.Gonçalo - Vista nascente-</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-49-RuaDeSGoncalo-b.jpg'/>
 <p>Legenda: Rua de S.Gonçalo - Vista poente.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Pertence à casa n.º 5 do campo de Sta. Ana, 
+                    para onde tem a frontaria e serventia principais</p>
+</div>
+<div>
+<p>«Chão de casa» do prazo do casal dos Chãos ou Quinteiro.</p>
+</div>
+<div>
+<p>Paga foro ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.</p>
+<p>Confronta, do norte, com portal do n.º 4.</p>
+</div>
+<div>
+<p>O Padre Inácio Palhares paga 2400 reis ao 
+                        enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1725.</p>
+</div>
+<div>
+<p>António Vieira da Costa, da freguesia de 
+                        Adaufe, casado com Helena Francisca da Cruz, 
+                        paga 1200 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1725.</p>
+</div>
+<div>
+<p>O Padre Jerónimo Vieira paga 1200 reis ao 
+                        enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1725.</p>
+</div>
+<div>
+<p>João Vieira, sombreireiro, casado com Teresa de Sá, 
+                        paga 1200 reis ao enfiteuta do prazo do 
+                        casal dos Chãos ou Quinteiro, conforme o 
+                        subemprazamento de 1726.</p>
+</div>
+<div>
+<p>João Gonçalves, serralheiro, casado com 
+                        Inocência Rodrigues, paga 1200 reis ao 
+                        enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1725.</p>
+</div>
+<div>
+<p>João Vieira, carpinteiro, casado com Custódia Ferreira, 
+                        paga 1200 reis ao enfiteuta do prazo 
+                        do casal dos Chãos ou Quinteiro, conforme o 
+                        subemprazamento feito em 1725.</p>
+</div>
+<div>
+<p>José de Oliveira, da freguesia de S. Mamede d'Este, 
+                        casado com Maria Lopes, paga 1200 
+                        reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1727.</p>
+</div>
+<div>
+<p>André Lopes, mestre pedreiro, casado com 
+                        Maria Francisca, paga 1900 reis ao enfiteuta do 
+                        prazo do casal dos Chãos ou Quinteiro.</p>
+<p>A este prazo pertence o n.° 1 da Praça do Gavião. 
+                        O n.° 11 foi construído depois de 1727 
+                        e o ri.° 1 depois de 1735.</p>
+</div>
+<div>
+<p>«Chão de casa» do prazo do casal dos Chãos ou Quinteiro.</p>
+</div>
+<div>
+<p>Bento Garcia, serralheiro, casado com Leonarda da Silva, 
+                        paga 1200 reis ao enfiteuta do prazo 
+                        do casal dos Chãos ou Quinteiro, conforme o 
+                        subemprazamento de 1725.</p>
+</div>
+<div>
+<p>Domingos António, barbeiro, casado com Marta Maria, 
+                        paga 1200 reis ao enfiteuta do prazo do 
+                        casal dos Chãos ou Quinteiro, 
+                        conforme subemprazamento de 1725.</p>
+</div>
+<div>
+<p>Miguel Rodrigues, espingardeiro, casado com 
+                        Ana Rodrigues, paga 1200 reis ao enfiteuta do 
+                        prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1726.</p>
+</div>
+<div>
+<p>André da Silva, albardeiro, casado com Maria Francisca, 
+                        paga, por cada uma das casas, 1200 
+                        reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme os subemprazamentos de 1726.</p>
+</div>
+<div>
+<p>Pedro Mendes, alfaiate, casado com Rosa Teixeira, 
+                        paga 1500 reis ao enfiteuta do prazo 
+                        do casal dos Chãos ou Quinteiro, conforme o 
+                        subemprazamento de 1725.</p>
+</div>
+<div>
+<p>André da Silva, casado com Maria Francisca, 
+                        paga 600 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1726.</p>
+</div>
+<div>
+<p>André da Silva, albardeiro, casado com Maria Francisca, 
+                        paga 3710 reis ao enfiteuta do prazo 
+                        do casal dos Chãos ou Quinteiro, à face do qual 
+                        foi subemprazado, no ano de 1732. A casa 
+                        n.º 26 correspondia, antes desta data, a duas 
+                        moradas de casas. Confronta, do sul, com o 
+                        quintal do Recolhimento de Sta. Maria Madalena.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: Pertence à casa n.º 5 do </p>
+<p>Descrição: 
+                    Pertence à casa n.º 5 do campo de Sta. Ana, 
+                    para onde tem a frontaria e serventia principais
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: «Chão de casa» do prazo do </p>
+<p>Descrição: 
+                    «Chão de casa» do prazo do casal dos Chãos ou Quinteiro.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 3</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: Paga foro ao enfiteuta do prazo do </p>
+<p>Descrição: 
+                    Paga foro ao enfiteuta do prazo do casal dos Chãos ou Quinteiro.
+                    Confronta, do norte, com portal do n.º 4.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 4</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: O </p>
+<p>Descrição: 
+                    O Padre Inácio Palhares paga 2400 reis ao 
+                        enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1725.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 5</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    António Vieira da Costa, da freguesia de 
+                        Adaufe, casado com Helena Francisca da Cruz, 
+                        paga 1200 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1725.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 6</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: O </p>
+<p>Descrição: 
+                    O Padre Jerónimo Vieira paga 1200 reis ao 
+                        enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1725.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 7</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    João Vieira, sombreireiro, casado com Teresa de Sá, 
+                        paga 1200 reis ao enfiteuta do prazo do 
+                        casal dos Chãos ou Quinteiro, conforme o 
+                        subemprazamento de 1726.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 8</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    João Gonçalves, serralheiro, casado com 
+                        Inocência Rodrigues, paga 1200 reis ao 
+                        enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1725.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 9</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    João Vieira, carpinteiro, casado com Custódia Ferreira, 
+                        paga 1200 reis ao enfiteuta do prazo 
+                        do casal dos Chãos ou Quinteiro, conforme o 
+                        subemprazamento feito em 1725.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 10</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    José de Oliveira, da freguesia de S. Mamede d'Este, 
+                        casado com Maria Lopes, paga 1200 
+                        reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1727.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 11</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    André Lopes, mestre pedreiro, casado com 
+                        Maria Francisca, paga 1900 reis ao enfiteuta do 
+                        prazo do casal dos Chãos ou Quinteiro.
+                    A este prazo pertence o n.° 1 da Praça do Gavião. 
+                        O n.° 11 foi construído depois de 1727 
+                        e o ri.° 1 depois de 1735.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 12</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: «Chão de casa» do prazo do </p>
+<p>Descrição: 
+                    «Chão de casa» do prazo do casal dos Chãos ou Quinteiro.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 13</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Bento Garcia, serralheiro, casado com Leonarda da Silva, 
+                        paga 1200 reis ao enfiteuta do prazo 
+                        do casal dos Chãos ou Quinteiro, conforme o 
+                        subemprazamento de 1725.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 14</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Domingos António, barbeiro, casado com Marta Maria, 
+                        paga 1200 reis ao enfiteuta do prazo do 
+                        casal dos Chãos ou Quinteiro, 
+                        conforme subemprazamento de 1725.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 15</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Miguel Rodrigues, espingardeiro, casado com 
+                        Ana Rodrigues, paga 1200 reis ao enfiteuta do 
+                        prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1726.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 16 e 17</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    André da Silva, albardeiro, casado com Maria Francisca, 
+                        paga, por cada uma das casas, 1200 
+                        reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme os subemprazamentos de 1726.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 18</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Pedro Mendes, alfaiate, casado com Rosa Teixeira, 
+                        paga 1500 reis ao enfiteuta do prazo 
+                        do casal dos Chãos ou Quinteiro, conforme o 
+                        subemprazamento de 1725.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 19 e 20</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    André da Silva, casado com Maria Francisca, 
+                        paga 600 reis ao enfiteuta do prazo do casal dos Chãos ou Quinteiro, 
+                        conforme o subemprazamento de 1726.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 21 e 26</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    André da Silva, albardeiro, casado com Maria Francisca, 
+                        paga 3710 reis ao enfiteuta do prazo 
+                        do casal dos Chãos ou Quinteiro, à face do qual 
+                        foi subemprazado, no ano de 1732. A casa 
+                        n.º 26 correspondia, antes desta data, a duas 
+                        moradas de casas. Confronta, do sul, com o 
+                        quintal do Recolhimento de Sta. Maria Madalena.
+                </p>
+
+
+
 </div>
 </body>
 </html>
