--- a/TCP1/html/RuaDoCampo.html
+++ b/TCP1/html/RuaDoCampo.html
@@ -3,31 +3,50 @@
 <h1>Rua do Campo</h1>
 <p>Número: 1</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-01-RuaDoCampo-nascente.PNG'/>
 <p>Legenda: Rua do Campo - vista nascente. </p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-01-RuaDoCampo-poente.PNG'/>
 <p>Legenda: Rua do Campo - vista poente.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Desde o ano de 1719 que os nº 1 e 2 se encontravam unidos. A frontaria que dá para a Rua Nova de Sousa corresponde ao nº15 da dita rua e é foreira à comenda de São Pedro de Merelim. </p>
+</div>
+<div>
+<p>Desde o ano de 1719 que os nº 1 e 2 se encontravam unidos. A frontaria que dá para a Rua Nova de Sousa corresponde ao nº15 da dita rua e é foreira à comenda de São Pedro de Merelim. </p>
+</div>
+<div>
+<p>Confronta, de Sul, com parte da mesma casa foreira à Confraria da Trindade, antiga Confraria da Companhia de Jesus e, de Norte, com casa dízima a Deus</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Domingos Dias</p>
 <p>Foro: 620 reis e galinhas</p>
-<p>Descrição: Desde o ano de </p>
+<p>Descrição: Desde o ano de 1719 que os nº 1 e 2 se encontravam unidos. A frontaria que dá para a Rua Nova de Sousa corresponde ao nº15 da dita rua e é foreira à comenda de São Pedro de Merelim. </p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
 <p>Enfiteuta: Domingos Dias</p>
 <p>Foro: 270 reis e 2 galinhas</p>
-<p>Descrição: Desde o ano de </p>
+<p>Descrição: Desde o ano de 1719 que os nº 1 e 2 se encontravam unidos. A frontaria que dá para a Rua Nova de Sousa corresponde ao nº15 da dita rua e é foreira à comenda de São Pedro de Merelim. </p>
+
+
+
 </div>
 <div>
 <p>Número: 3</p>
 <p>Enfiteuta: Os herdeiros do Padre Domingos Tinoco</p>
 <p>Foro: 150 reis e 2 galinhas</p>
-<p>Descrição: Confronta, de Sul, com parte da mesma casa foreira à </p>
+<p>Descrição: Confronta, de Sul, com parte da mesma casa foreira à Confraria da Trindade, antiga Confraria da Companhia de Jesus e, de Norte, com casa dízima a Deus</p>
+
+
+
 </div>
 </body>
 </html>
