--- a/TCP1/html/RuaDosBiscainhos.html
+++ b/TCP1/html/RuaDosBiscainhos.html
@@ -3,19 +3,38 @@
 <h1>Rua dos Biscaínhos</h1>
 <p>Número: 59</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-59-RuaDosBiscainhos-norte.jpg'/>
 <p>Legenda: Rua Dos Biscaínhos - norte.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Os herdeiros do Lic.  Domingos Correia de Abreu pagam 150 reis e 2 alqueires e meio de trigo ao enfiteuta do prazo da Quinta da Cónega</p>
+</div>
+<div>
+<p>Pertence ao nº1 da Rua da Cónega, para onde tem, também, frontaria.</p>
+<p>A fachada situa-se no Campo da Vinha.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Sebastião de Faria Gusmão, enfiteuta principal da Quinta da Cónega.</p>
-<p>Descrição: Os herdeiros do Lic. </p>
+<p>Descrição:  
+                Os herdeiros do Lic.  Domingos Correia de Abreu pagam 150 reis e 2 alqueires e meio de trigo ao enfiteuta do prazo da Quinta da Cónega
+            </p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
 <p>Enfiteuta: Sebastião de Faria Gusmão, enfiteuta principal da Quinta da Cónega.</p>
-<p>Descrição: Pertence ao nº1 da </p>
+<p>Descrição:  
+                Pertence ao nº1 da Rua da Cónega, para onde tem, também, frontaria.
+                A fachada situa-se no Campo da Vinha.
+            </p>
+
+
+
 </div>
 </body>
 </html>
