--- a/TCP1/html/RuaDosCegosOuDoForno.html
+++ b/TCP1/html/RuaDosCegosOuDoForno.html
@@ -3,75 +3,226 @@
 <h1>Rua dos Cegos ou do Forno</h1>
 <p>Número: 11</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-11-RuaDosCegosOuDoForno-Nascente.jpg'/>
 <p>Legenda: Rua dos Cegos ou do Forno - vista nascente.</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-11-RuaDosCegosOuDoForno-Poente.jpg'/>
 <p>Legenda: Rua dos Cegos ou do Forno - vista poente.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Corresponde ao n.º 11 da Rua de S. João,
+                    para onde tem a frontaria e serventia
+                    principais e ao n.º 3 e 4 da Rua das Oussias.</p>
+</div>
+<div>
+<p>O enfiteuta é filho de Alexandre Pereira Marinho,
+                    sendo o emprazamento feito no ano de 1724.
+                    A casa foi construída em 1535, em pertenças
+                    da casa n.º 9, da Rua de S. João.</p>
+</div>
+<div>
+<p>Foi construída em pertenças do n.º 9, da rua de S. João.</p>
+</div>
+<div>
+<p>A casa n.º 4 confronta, do sul,
+                    com casa foreira à Capela de Nossa Senhora da Glória.</p>
+</div>
+<div>
+<p>Confronta, do norte, com casa foreira
+                    à Capela de Nossa Senhora da Glória e, do sul,
+                    com casa foreira à Igreja de S. Pedro d'Este.</p>
+</div>
+<div>
+<p>Confronta, do norte, com casa foreira
+                    à Igreja de S. Pedro d'Este.</p>
+</div>
+<div>
+<p>Foi construída em 1554,em pretenças do n.º 8.</p>
+</div>
+<div>
+<p>A casa n.º 9 confronta, do sul,
+                    com a travessa que vai para a Rua de S. João e,
+                    foi unida ao n.º 8, no ano de 1674.
+                    O prazo é constituído, ainda, pelo n.º 9
+                    da travessa da Rua de S. João
+                    para a do Forno.</p>
+</div>
+<div>
+<p>Corresponde ao n.º 7 da travessa
+                    que vai para a Rua de S. João,
+                    para onde tem a frontaria e serventia
+                    principais. No ano de 1596, 
+                    o n.º 11 foi unido ao n.º 10,
+                    constituindo um só prazo.</p>
+</div>
+<div>
+<p>Pertence ao n.º 5 da travessa da 
+                    Rua de S. João para a do Forno.
+                    A denominação de «Forno do Infante» advém-lhe
+                    de ter sido construída no local onde,
+                    antes de 1481, funcionou o
+                    antigo forno.</p>
+</div>
+<div>
+<p>Não aparece desenhada no mapa,
+                    por ter sido demolida e incorporada no 
+                    Colégio de S. Paulo da Companhia de Jesus.
+                    Inicialmente foi foreira à obra da Sé.
+                    Depois de 1568, foi trocada por outra
+                    casa do referido Colégio.</p>
+</div>
+<div>
+<p>Correspondem ao n.º 1 da travessa
+                    que vai da Rua do Forno para a
+                    do Poço, para onde têm a frontaria e
+                    serventia principais. No prazo da casa n.º 19
+                    foi incorporado o n.º 15, em 1673,
+                    e os n.º 17 e 18, em 1561.</p>
+</div>
+<div>
+<p>A casa é foreira ao chantrado.
+                    O censo é pago pelo Dr. Francisco Gomes do Couto.</p>
+</div>
+<div>
+<p>O enfiteuta sucedeu a Constantino Barreto de Meneses
+                    e ao Rev. Abade Jerónimo de Araújo.
+                    O n.º 20 situa-se na esquina que dá para a travessa
+                    que vai para a Rua do Poço e
+                    confronta, do sul, com a dita travessa e,
+                    do norte, com casa de vínculo. O n.º 21
+                    confronta, do Sul, com a referida casa de vínculo.
+                    O n.º 10 da travessa da rua do Forno
+                    para a do Poço faz parte do n.º 20.</p>
+</div>
+<div>
+<p>O enfiteuta sucedeu a Constantino Barreto de Meneses
+                    e ao Rev. Abade Jerónimo de Araújo.
+                    O n.º 20 situa-se na esquina que dá para a travessa
+                    que vai para a Rua do Poço e
+                    confronta, do sul, com a dita travessa e,
+                    do norte, com casa de vínculo. O n.º 21
+                    confronta, do Sul, com a referida casa de vínculo.
+                    O n.º 10 da travessa da rua do Forno
+                    para a do Poço faz parte do n.º 20.</p>
+</div>
+<div>
+<p>Pertence ao n.º 4</p>
+</div>
+<div>
+<p>O emprazamento foi feito em 1710.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
-<p>Descrição: Corresponde ao n.º 11 da </p>
+<p>Descrição: Corresponde ao n.º 11 da Rua de S. João,
+                    para onde tem a frontaria e serventia
+                    principais e ao n.º 3 e 4 da Rua das Oussias.</p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
 <p>Enfiteuta: Francisco Pereira Marinho</p>
 <p>Foro: 280 reis e 1 galinha</p>
-<p>Descrição: O enfiteuta é filho de </p>
+<p>Descrição: O enfiteuta é filho de Alexandre Pereira Marinho,
+                    sendo o emprazamento feito no ano de 1724.
+                    A casa foi construída em 1535, em pertenças
+                    da casa n.º 9, da Rua de S. João.</p>
+
+
+
 </div>
 <div>
 <p>Número: 3</p>
 <p>Enfiteuta: João Pereira do Lago</p>
 <p>Foro: 470 reis e 2 galinhas</p>
-<p>Descrição: Foi construída em pertenças do n.º 9, da </p>
+<p>Descrição: Foi construída em pertenças do n.º 9, da rua de S. João.</p>
+
+
+
 </div>
 <div>
 <p>Número: 4 e 23</p>
 <p>Enfiteuta: Francisco Correia, carpinteiro</p>
 <p>Foro: 520 reis e 2 galinhas</p>
 <p>Descrição: A casa n.º 4 confronta, do sul,
-                    com casa foreira à </p>
+                    com casa foreira à Capela de Nossa Senhora da Glória.</p>
+
+
+
 </div>
 <div>
 <p>Número: 5</p>
 <p>Enfiteuta: Rev. João de Sousa Lima, Mestre Escola</p>
 <p>Foro: 320 reis e 2 galinhas</p>
 <p>Descrição: Confronta, do norte, com casa foreira
-                    à </p>
+                    à Capela de Nossa Senhora da Glória e, do sul,
+                    com casa foreira à Igreja de S. Pedro d'Este.</p>
+
+
+
 </div>
 <div>
 <p>Número: 6</p>
 <p>Enfiteuta: Dr. José Peixoto</p>
 <p>Foro: 400 reis e 2 capões</p>
 <p>Descrição: Confronta, do norte, com casa foreira
-                    à </p>
+                    à Igreja de S. Pedro d'Este.</p>
+
+
+
 </div>
 <div>
 <p>Número: 7</p>
 <p>Enfiteuta: Francisco da Costa de Mesquita, cidadão de Braga</p>
 <p>Foro: 120 reis e 2 galinhas</p>
-<p>Descrição: Foi construída em </p>
+<p>Descrição: Foi construída em 1554,em pretenças do n.º 8.</p>
+
+
+
 </div>
 <div>
 <p>Número: 8 e 9</p>
 <p>Enfiteuta: Lie. João Carvalho Ferreira</p>
 <p>Foro: 630 reis e 4 galinhas</p>
 <p>Descrição: A casa n.º 9 confronta, do sul,
-                    com a travessa que vai para a </p>
+                    com a travessa que vai para a Rua de S. João e,
+                    foi unida ao n.º 8, no ano de 1674.
+                    O prazo é constituído, ainda, pelo n.º 9
+                    da travessa da Rua de S. João
+                    para a do Forno.</p>
+
+
+
 </div>
 <div>
 <p>Número: 10 e 11</p>
 <p>Descrição: Corresponde ao n.º 7 da travessa
-                    que vai para a </p>
+                    que vai para a Rua de S. João,
+                    para onde tem a frontaria e serventia
+                    principais. No ano de 1596, 
+                    o n.º 11 foi unido ao n.º 10,
+                    constituindo um só prazo.</p>
+
+
+
 </div>
 <div>
 <p>Número: 12</p>
 <p>Enfiteuta: Carlos Magalhães de Azevedo, Cónego</p>
 <p>Foro: 290 reis e 2 galinhas</p>
 <p>Descrição: Pertence ao n.º 5 da travessa da 
-                    </p>
+                    Rua de S. João para a do Forno.
+                    A denominação de «Forno do Infante» advém-lhe
+                    de ter sido construída no local onde,
+                    antes de 1481, funcionou o
+                    antigo forno.</p>
+
+
+
 </div>
 <div>
 <p>Número: 13</p>
@@ -82,30 +233,68 @@
 <p>Número: 14</p>
 <p>Descrição: Não aparece desenhada no mapa,
                     por ter sido demolida e incorporada no 
-                    </p>
+                    Colégio de S. Paulo da Companhia de Jesus.
+                    Inicialmente foi foreira à obra da Sé.
+                    Depois de 1568, foi trocada por outra
+                    casa do referido Colégio.</p>
+
+
+
 </div>
 <div>
 <p>Número: 15, 17, 18 e 19</p>
 <p>Descrição: Correspondem ao n.º 1 da travessa
-                    que vai da </p>
+                    que vai da Rua do Forno para a
+                    do Poço, para onde têm a frontaria e
+                    serventia principais. No prazo da casa n.º 19
+                    foi incorporado o n.º 15, em 1673,
+                    e os n.º 17 e 18, em 1561.</p>
+
+
+
 </div>
 <div>
 <p>Número: 16</p>
 <p>Foro: 54 reis (de censo)</p>
 <p>Descrição: A casa é foreira ao chantrado.
-                    O censo é pago pelo </p>
+                    O censo é pago pelo Dr. Francisco Gomes do Couto.</p>
+
+
+
 </div>
 <div>
 <p>Número: 20</p>
 <p>Enfiteuta: António Barreto de Meneses</p>
 <p>Foro: 240 reis e 2 galinhas</p>
-<p>Descrição: O enfiteuta sucedeu a </p>
+<p>Descrição: O enfiteuta sucedeu a Constantino Barreto de Meneses
+                    e ao Rev. Abade Jerónimo de Araújo.
+                    O n.º 20 situa-se na esquina que dá para a travessa
+                    que vai para a Rua do Poço e
+                    confronta, do sul, com a dita travessa e,
+                    do norte, com casa de vínculo. O n.º 21
+                    confronta, do Sul, com a referida casa de vínculo.
+                    O n.º 10 da travessa da rua do Forno
+                    para a do Poço faz parte do n.º 20.</p>
+
+
+
 </div>
 <div>
 <p>Número: 21</p>
 <p>Enfiteuta: António Barreto de Meneses</p>
 <p>Foro: 500 reis e 2 capões</p>
-<p>Descrição: O enfiteuta sucedeu a </p>
+<p>Descrição: O enfiteuta sucedeu a Constantino Barreto de Meneses
+                    e ao Rev. Abade Jerónimo de Araújo.
+                    O n.º 20 situa-se na esquina que dá para a travessa
+                    que vai para a Rua do Poço e
+                    confronta, do sul, com a dita travessa e,
+                    do norte, com casa de vínculo. O n.º 21
+                    confronta, do Sul, com a referida casa de vínculo.
+                    O n.º 10 da travessa da rua do Forno
+                    para a do Poço faz parte do n.º 20.</p>
+
+
+
 </div>
 <div>
 <p>Número: 22</p>
@@ -115,12 +304,18 @@
 <div>
 <p>Número: 23</p>
 <p>Descrição: Pertence ao n.º 4</p>
+
+
+
 </div>
 <div>
 <p>Número: 24</p>
 <p>Enfiteuta: Teresa da Silveira, viúva de Sebastião do Couto</p>
 <p>Foro: 300 reis e 2 galinhas</p>
-<p>Descrição: O emprazamento foi feito em </p>
+<p>Descrição: O emprazamento foi feito em 1710.</p>
+
+
+
 </div>
 </body>
 </html>
