--- a/TCP1/html/RuaDosSapateirosERossioDaPraca.html
+++ b/TCP1/html/RuaDosSapateirosERossioDaPraca.html
@@ -3,36 +3,129 @@
 <h1>Rua dos Sapateiros e Rossio da Praça</h1>
 <p>Número: 23</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-23-RuaDosSapateirosERossioDaPraca-nascente.jpg'/>
 <p>Legenda: Rua dos Sapateiros e do Rossio da Praça - nascente.</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-23-RuaDosSapateirosERossioDaPraca-poente.jpg'/>
 <p>Legenda: Rua dos Sapateiros e do Rossio da Praça - poente.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Pertence ao n.º 13 da Rua Nova de Sousa, para onde tem a
+                        frontaria e seventia principais.</p>
+</div>
+<div>
+<p>Esta casa foi da sogra de Luís de
+                        Abreu, Helena Vaz, filha de
+                            Manuel de Freitas.</p>
+<p>Confronta, do norte, com casa foreira à comenda de Rio Frio.</p>
+</div>
+<div>
+<p>Confronta, do norte, com casa foreira à comenda de Rio Frio e, do sul, com
+                        casa da cororaria.</p>
+</div>
+<div>
+<p>Confronta, do norte, com casa foreira à comenda de Rio Frio.</p>
+</div>
+<div>
+<p>O enfiteuta herdara de seus pais, João de
+                            Barros e Francisca
+                        Pereira.</p>
+</div>
+<div>
+<p>Confronta, do sul, com a casa n.º 9, foreira à obra da Sé.</p>
+</div>
+<div>
+<p>Pertencera a Manuel Gomes de
+                            Mascarenhas.</p>
+<p>É foreira à obra da Sé, à qual paga 2 galinhas. Está emprazada a Maria da Cunha, viúva de Luís Moreira.</p>
+</div>
+<div>
+<p>O censo é pago por Miguel Soares,
+                        sapateiro.</p>
+</div>
+<div>
+<p>Confronta, so sul, com casa foreira à cororaria.</p>
+</div>
+<div>
+<p>Entre os anos de 1509 e 1561 o n.º 13 esteve
+                        unido a esta casa, constituindo uma só morada, com serventia, pelo n.º 4, da
+                            Rua da Vielinha. Desta casa,
+                        situada na «agiela da rua», foram feitas diversas escrituras à face do prazo
+                        principal depois de 1686.</p>
+</div>
+<div>
+<p>O prao é constituído por uma casa situada na agiela da Rua da Vielinha, (a que corresponde o n.º
+                        5) e da qual, a partir do ano de 1686, foram feitas várias
+                        escrituras de emprazamento.</p>
+</div>
+<div>
+<p>Esta casa é foreira à obra da Sé e encontra-se emprazada a Simão da Costa, sapateiro, casado com Antónia Rodrigues. Paga de foro 340
+                        reis.</p>
+</div>
+<div>
+<p>Até 1515 faziam parte deste prazo os nº.1 e 3 da Rua da Vielinha.</p>
+</div>
+<div>
+<p>O censo é pago por José Rodrigues
+                        Zenha.</p>
+</div>
+<div>
+<p>No ano de 1679 foi-lhe incorporada uma cozinha pertencente ao
+                        n.º 2.</p>
+</div>
+<div>
+<p>O foro é respeitante à cozinha, dado que o resto da casa não pertence ao
+                        cabido.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
-<p>Descrição: Pertence ao n.º 13 da </p>
+<p>Descrição: 
+                    Pertence ao n.º 13 da Rua Nova de Sousa, para onde tem a
+                        frontaria e seventia principais.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
 <p>Enfiteuta: Luís de Abreu, sapateiro</p>
 <p>Foro: 300 reis e 2 galinhas</p>
-<p>Descrição: Esta casa foi da sogra de </p>
+<p>Descrição: 
+                    Esta casa foi da sogra de Luís de
+                        Abreu, Helena Vaz, filha de
+                            Manuel de Freitas.
+                    Confronta, do norte, com casa foreira à comenda de Rio Frio.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 3</p>
 <p>Enfiteuta: António Vieira de Araújo</p>
 <p>Foro: 340 reis e 2 galinhas</p>
-<p>Descrição: Confronta, do norte, com casa foreira à comenda de Rio Frio e, do sul, com
-                        casa da cororaria.</p>
+<p>Descrição: 
+                    Confronta, do norte, com casa foreira à comenda de Rio Frio e, do sul, com
+                        casa da cororaria.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 4</p>
 <p>Enfiteuta: Quitéria Maria</p>
 <p>Foro: 480 reis</p>
-<p>Descrição: Confronta, do norte, com casa foreira à comenda de Rio Frio.</p>
+<p>Descrição: 
+                    Confronta, do norte, com casa foreira à comenda de Rio Frio.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 5</p>
@@ -43,7 +136,14 @@
 <p>Número: 6</p>
 <p>Enfiteuta: Vicente de Barros</p>
 <p>Foro: 260 reis e 2 galinhas</p>
-<p>Descrição: O enfiteuta herdara de seus pais, </p>
+<p>Descrição: 
+                    O enfiteuta herdara de seus pais, João de
+                            Barros e Francisca
+                        Pereira.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 7</p>
@@ -54,44 +154,94 @@
 <p>Número: 8</p>
 <p>Enfiteuta: Ana Maria Ribeiro, viúva</p>
 <p>Foro: 160 reis e 2 galinhas</p>
-<p>Descrição: Confronta, do sul, com a casa n.º 9, foreira à obra da Sé.</p>
+<p>Descrição: 
+                    Confronta, do sul, com a casa n.º 9, foreira à obra da Sé.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 9</p>
-<p>Descrição: Pertencera a </p>
+<p>Descrição: 
+                    Pertencera a Manuel Gomes de
+                            Mascarenhas.
+                    É foreira à obra da Sé, à qual paga 2 galinhas. Está emprazada a Maria da Cunha, viúva de Luís Moreira.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 10</p>
 <p>Foro: 54 reis (de censo)</p>
-<p>Descrição: O censo é pago por </p>
+<p>Descrição: 
+                    O censo é pago por Miguel Soares,
+                        sapateiro.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 11</p>
 <p>Enfiteuta: Pedro Loureiro</p>
 <p>Foro: 340 reis e 2 galinhas</p>
-<p>Descrição: Confronta, so sul, com casa foreira à cororaria.</p>
+<p>Descrição: 
+                    Confronta, so sul, com casa foreira à cororaria.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 12</p>
 <p>Enfiteuta: António Pereira de Barros, Reitor da freguesia de Adaúfe</p>
 <p>Foro: 380 reis e 2 galinhas</p>
-<p>Descrição: Entre os anos de </p>
+<p>Descrição: 
+                    Entre os anos de 1509 e 1561 o n.º 13 esteve
+                        unido a esta casa, constituindo uma só morada, com serventia, pelo n.º 4, da
+                            Rua da Vielinha. Desta casa,
+                        situada na «agiela da rua», foram feitas diversas escrituras à face do prazo
+                        principal depois de 1686.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 13</p>
 <p>Enfiteuta: Josefa Maria, viúva</p>
 <p>Foro: 1460 reis e 2 galinhas</p>
-<p>Descrição: O prao é constituído por uma casa situada na agiela da </p>
+<p>Descrição: 
+                    O prao é constituído por uma casa situada na agiela da Rua da Vielinha, (a que corresponde o n.º
+                        5) e da qual, a partir do ano de 1686, foram feitas várias
+                        escrituras de emprazamento.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 14</p>
-<p>Descrição: Esta casa é foreira à obra da Sé e encontra-se emprazada a </p>
+<p>Descrição: 
+                    Esta casa é foreira à obra da Sé e encontra-se emprazada a Simão da Costa, sapateiro, casado com Antónia Rodrigues. Paga de foro 340
+                        reis.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 15</p>
 <p>Enfiteuta: António de Azevedo, sapateiro, casado com Teresa de Sousa</p>
 <p>Foro: 640 reis e 2 galinhas</p>
-<p>Descrição: Até </p>
+<p>Descrição: 
+                    Até 1515 faziam parte deste prazo os nº.1 e 3 da Rua da Vielinha.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 16</p>
@@ -101,20 +251,37 @@
 <div>
 <p>Número: 17</p>
 <p>Foro: 108 reis (de censo)</p>
-<p>Descrição: O censo é pago por </p>
+<p>Descrição: 
+                    O censo é pago por José Rodrigues
+                        Zenha.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Benta de Araújo</p>
 <p>Foro: 200 reis e 2 galinhas</p>
-<p>Descrição: No ano de </p>
+<p>Descrição: 
+                    No ano de 1679 foi-lhe incorporada uma cozinha pertencente ao
+                        n.º 2.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
 <p>Enfiteuta: Manuel da Silva, padeiro</p>
 <p>Foro: 15 reis</p>
-<p>Descrição: O foro é respeitante à cozinha, dado que o resto da casa não pertence ao
-                        cabido.</p>
+<p>Descrição: 
+                    O foro é respeitante à cozinha, dado que o resto da casa não pertence ao
+                        cabido.
+                </p>
+
+
+
 </div>
 </body>
 </html>
