--- a/TCP1/html/RuaEmFrenteDeNossaSenhoraDeGuadalupe.html
+++ b/TCP1/html/RuaEmFrenteDeNossaSenhoraDeGuadalupe.html
@@ -3,43 +3,136 @@
 <h1>Rua em Frente de Nossa Senhora de Guadalupe</h1>
 <p>Número: 52</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-52-RuaEmFrenteDeNossaSDeGuadalupe-a.jpg'/>
 <p>Legenda: Rua em frente da N. Sra. de Guadalupe - Vista poente.</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-52-RuaEmFrenteDeNossaSDeGuadalupe-b.jpg'/>
 <p>Legenda: Rua da Regueira Margarida - Vista norte.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Pertence à casa n.° 17 da Rua de N. Sra. de Guadalupe, 
+                        para onde tem frontaria e serventia principais.</p>
+</div>
+<div>
+<p>Quintal da casa n.° 1.</p>
+</div>
+<div>
+<p>Silvestre de Oliveira, jornaleiro, casado com 
+                        Inês Dantas, paga 2000 reis, pelo chão n.° 3 e 
+                        pelos n.º 4 e 5, ao subenfiteuta da casa n.° 9 
+                        da Rua de N. Sra. de Guadalupe.</p>
+</div>
+<div>
+<p>Portal de serventia do quintal que anda 
+                        subemprazado juntamente com a casa n.° 9 da 
+                        Rua N. Sra. de Guadalupe.</p>
+</div>
+<div>
+<p>Pertencem ao casal dos Chãos ou Quinteiro, a 
+                        cujo enfiteuta se paga foro. Nos livros dos 
+                        prazos do cabido não se encontram escrituras se 
+                        subemprazamento</p>
+</div>
+<div>
+<p>Chãos de casa do prazo do casal dos Chãos ou Quinteiro.</p>
+</div>
+<div>
+<p>Paulo Francisco, ferreiro, casado com Jerónima da Silva, 
+                        paga 400 reis ao enfiteuta do prazo do 
+                        casal de Infias ou Flores.</p>
+<p>Só parte do n.° 1 é foreiro ao cabido.</p>
+</div>
+<div>
+<p>João da Costa, cutileiro, casado com Maria Ferreira, 
+                        paga 400 reis ao enfiteuta do prazo do 
+                        casal de Infias e Flores, conforme o 
+                        subemprazamento de 1720.</p>
+<p>No ano de 1729 foram feitas escrituras 
+                        subalternas dos n.° 6 e 7. Só parte do n.° 7 é 
+                        deste subenfiteuta.</p>
+</div>
+<div>
+<p>Garcia Fernandes, casado com Narcisa Francisca, 
+                        paga 600 reis ao subenfiteuta da casa 
+                        n.° 5. Só parte do n.° 7 é deste subenfiteuta.</p>
+</div>
+<div>
+<p>Paga foro ao enfiteura do prazo do casal de Infias ou Flores.</p>
+</div>
+<div>
+<p>Paga foro ao enfiteuta do prazo do casal de Infias ou Flores. 
+                        Confronta, do nascente, com 
+                        casa foreira à confraria de S. João do Souto.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Vid. casa n.º9 da rua de N. Sr.ª de Guadalupe.</p>
-<p>Descrição: Pertence à casa n.° 17 da </p>
+<p>Descrição: 
+                    Pertence à casa n.° 17 da Rua de N. Sra. de Guadalupe, 
+                        para onde tem frontaria e serventia principais.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
-<p>Descrição: Quintal da casa n.° 1.</p>
+<p>Descrição: 
+                    Quintal da casa n.° 1.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 3, 4 e 5</p>
 <p>Enfiteuta: Vid. casa n.º9 da rua de N. Sr.ª de Guadalupe.</p>
-<p>Descrição: None</p>
+<p>Descrição: 
+                    Silvestre de Oliveira, jornaleiro, casado com 
+                        Inês Dantas, paga 2000 reis, pelo chão n.° 3 e 
+                        pelos n.º 4 e 5, ao subenfiteuta da casa n.° 9 
+                        da Rua de N. Sra. de Guadalupe.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 6</p>
-<p>Descrição: Portal de serventia do quintal que anda 
+<p>Descrição: 
+                    Portal de serventia do quintal que anda 
                         subemprazado juntamente com a casa n.° 9 da 
-                        </p>
+                        Rua N. Sra. de Guadalupe.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 7 a 9</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: Pertencem ao </p>
+<p>Descrição: 
+                    Pertencem ao casal dos Chãos ou Quinteiro, a 
+                        cujo enfiteuta se paga foro. Nos livros dos 
+                        prazos do cabido não se encontram escrituras se 
+                        subemprazamento
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 10 e 11</p>
 <p>Enfiteuta: D. Agostinha Maria de Barros Gavião, enfiteuta principal do prazo do casal dos Chãos ou Quinteiro.</p>
-<p>Descrição: Chãos de casa do prazo do </p>
+<p>Descrição: 
+                    Chãos de casa do prazo do casal dos Chãos ou Quinteiro.
+                </p>
+
+
+
 </div>
 </body>
 </html>
