--- a/TCP1/html/RuaVerde.html
+++ b/TCP1/html/RuaVerde.html
@@ -3,25 +3,95 @@
 <h1>Rua Verde</h1>
 <p>Número: 21</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-21-RuaVerde-nascente.jpg'/>
 <p>Legenda: Rua Verde - nascente.</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-21-RuaVerde-poente.jpg'/>
 <p>Legenda: Rua Verde - poente.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Confronta, do sul, com casa foreira à cororaria.</p>
+</div>
+<div>
+<p>A enfiteuta é filha de Francisco
+                            Rodrigues, torneiro.</p>
+<p>Confronta, do norte, com casa foreira à cororaria. Entre os anos de
+                        1670 e 1724 esteve unida ao n.º 3.</p>
+</div>
+<div>
+<p>Corresponde, desde o ano 1627, à casa n.º 12 da
+                        Rua de St.º António. Encontra-se situada defronte do
+                        postigo de S. Sebastião.</p>
+</div>
+<div>
+<p>O enfiteuta é filho de Teresa da Costa
+                        e de seu marido António Pereira.</p>
+<p>Encontram-se situadas junto ao postigo de S. Sebastião e
+                        foram construídas, antes de 1563, no
+                        «lugar do Sabugal», pertencente ao n.º 12 da
+                        Rua de Sto. António.</p>
+</div>
+<div>
+<p>Quintal denominado do Sabugal, que foi de José de
+                            Araújo Teixeira.</p>
+</div>
+<div>
+<p>Estão unidas, num só prazo, desde o ano de 1549. A casa n.º
+                        9, confronta, do sul com casa foreira ao Hospital de S. Marcos.</p>
+</div>
+<div>
+<p>Paga pensão à obra da Sé. São enfiteutas os herdeiros de Maria Ribeiro, que pagam 80 reis de
+                        foro.</p>
+</div>
+<div>
+<p>O enfiteuta foi dotado com esta casa.</p>
+</div>
+<div>
+<p>Entre os anos de 1609 e 1640 pertenceu ao n.º
+                        13.</p>
+</div>
+<div>
+<p>Os enfiteuras pagavam um foro muito pequeno, dado que as casas tinham sido
+                        consideradas arruinadas no último emprazamento, etectuado no ano de
+                        1673.</p>
+<p>Confrontam, do Sul, com casas foreiras ao Hospital de S. Marcos.</p>
+</div>
+<div>
+<p>Estas casas tinham pertencido a Isabel da
+                            Silva e, anteriormente, a Julião
+                            Lopes.</p>
+</div>
+<div>
+<p>Corresponde ao n.º 12 da Rua de Maximinos, para onde tem a
+                        fronteira e serventia principais.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
 <p>Enfiteuta: Maria Catarina do Céu, religiosa do Salvador</p>
 <p>Foro: 170 reis e 2 galinhas</p>
-<p>Descrição: Confronta, do sul, com casa foreira à cororaria.</p>
+<p>Descrição: 
+                    Confronta, do sul, com casa foreira à cororaria.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
 <p>Enfiteuta: Faustina Pereira</p>
 <p>Foro: 180 reis e 1 galinha</p>
-<p>Descrição: A enfiteuta é filha de </p>
+<p>Descrição: 
+                    A enfiteuta é filha de Francisco
+                            Rodrigues, torneiro.
+                    Confronta, do norte, com casa foreira à cororaria. Entre os anos de
+                        1670 e 1724 esteve unida ao n.º 3.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 3</p>
@@ -30,35 +100,75 @@
 </div>
 <div>
 <p>Número: 4</p>
-<p>Descrição: Corresponde, desde o ano </p>
+<p>Descrição: 
+                    Corresponde, desde o ano 1627, à casa n.º 12 da
+                        Rua de St.º António. Encontra-se situada defronte do
+                        postigo de S. Sebastião.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 5, 6 e 7</p>
 <p>Enfiteuta: António Pereira, sapateiro</p>
 <p>Foro: 100 reis e 1 galinha</p>
-<p>Descrição: O enfiteuta é filho de </p>
+<p>Descrição: 
+                    O enfiteuta é filho de Teresa da Costa
+                        e de seu marido António Pereira.
+                    Encontram-se situadas junto ao postigo de S. Sebastião e
+                        foram construídas, antes de 1563, no
+                        «lugar do Sabugal», pertencente ao n.º 12 da
+                        Rua de Sto. António.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 8</p>
 <p>Enfiteuta: Teresa da Costa, viúva de António Pereira</p>
 <p>Foro: 2 galinhas</p>
-<p>Descrição: Quintal denominado do Sabugal, que foi de </p>
+<p>Descrição: 
+                    Quintal denominado do Sabugal, que foi de José de
+                            Araújo Teixeira.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 9 e 10</p>
 <p>Enfiteuta: Salvador Pinto, guarda da Sé</p>
 <p>Foro: 220 reis e 2 galinhas</p>
-<p>Descrição: Estão unidas, num só prazo, desde o ano de </p>
+<p>Descrição: 
+                    Estão unidas, num só prazo, desde o ano de 1549. A casa n.º
+                        9, confronta, do sul com casa foreira ao Hospital de S. Marcos.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 11</p>
-<p>Descrição: Paga pensão à obra da Sé. São enfiteutas os herdeiros de </p>
+<p>Descrição: 
+                    Paga pensão à obra da Sé. São enfiteutas os herdeiros de Maria Ribeiro, que pagam 80 reis de
+                        foro.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 12</p>
 <p>Enfiteuta: José Pereira, sapateiro</p>
 <p>Foro: 95 reis e 1 galinha</p>
-<p>Descrição: O enfiteuta foi dotado com esta casa.</p>
+<p>Descrição: 
+                    O enfiteuta foi dotado com esta casa.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 13</p>
@@ -69,7 +179,13 @@
 <p>Número: 14</p>
 <p>Enfiteuta: Padre Matias de Lemos</p>
 <p>Foro: 30 reis e 2 galinhas</p>
-<p>Descrição: Entre os anos de </p>
+<p>Descrição: 
+                    Entre os anos de 1609 e 1640 pertenceu ao n.º
+                        13.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 15 e 16</p>
@@ -80,19 +196,38 @@
 <p>Número: 17 e 18</p>
 <p>Enfiteuta: Os herdeiros de Duarte Mendes de Oliveira</p>
 <p>Foro: 1 galinha</p>
-<p>Descrição: Os enfiteuras pagavam um foro muito pequeno, dado que as casas tinham sido
+<p>Descrição: 
+                    Os enfiteuras pagavam um foro muito pequeno, dado que as casas tinham sido
                         consideradas arruinadas no último emprazamento, etectuado no ano de
-                        </p>
+                        1673.
+                    Confrontam, do Sul, com casas foreiras ao Hospital de S. Marcos.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 19</p>
 <p>Enfiteuta: Manuel Vieira</p>
 <p>Foro: 225 reis e 2 galinhas</p>
-<p>Descrição: Estas casas tinham pertencido a </p>
+<p>Descrição: 
+                    Estas casas tinham pertencido a Isabel da
+                            Silva e, anteriormente, a Julião
+                            Lopes.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 20</p>
-<p>Descrição: Corresponde ao n.º 12 da </p>
+<p>Descrição: 
+                    Corresponde ao n.º 12 da Rua de Maximinos, para onde tem a
+                        fronteira e serventia principais.
+                </p>
+
+
+
 </div>
 </body>
 </html>
