--- a/TCP1/html/RuadeStaMariaOuDoPoco.html
+++ b/TCP1/html/RuadeStaMariaOuDoPoco.html
@@ -3,17 +3,116 @@
 <h1>Rua de Sta. Maria ou do Poço</h1>
 <p>Número: 14</p>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-14-RuaDeSMariaOuDoPoco-Nascente.jpg'/>
 <p>Legenda: Rua de Sta. Maria ou do Poço - vista Nascente.</p>
 </div>
 <div>
-<img src='None'/>
+<img src='../MapaRuas-materialBase/imagem/MRB-14-RuaDeSMariaOuDoPoco-Poente.jpg'/>
 <p>Legenda: Rua de Sta. Maria ou do Poço - vista Poente.</p>
 </div>
-<h2>Casas:</h2>
+<h2>Descrição:</h2>
+<div>
+<p>Corresponde ao n.º 17 da Rua das Oussias, para onde tem a frontaria
+                    e serventia principais.</p>
+</div>
+<div>
+<p>Estas casas, juntamente com o n.º 5
+                    foram construídas depois de 1543, em pertenças
+                    do n.º3.</p>
+</div>
+<div>
+<p>Aqui vivem os vigário da Sé.
+                    O Cabido doou o n.º 5 (depois de 1703), e o n.º 6
+                    (depois de 1631), aos vigários da Sé, para sua
+                    residência. A casa n.º 5 foi construída em pertenças
+                    do n.º 4, a partir do referido ano de 1703.
+                </p>
+</div>
+<div>
+<p>Foi construída depois de 1559, em pertenças que
+                    foram do n.º 6.</p>
+</div>
+<div>
+<p>O n.º 8 foi unida, num só prazo, ao n.º 9.</p>
+</div>
+<div>
+<p>O emprazamento foi feito no ano de 1727.</p>
+</div>
+<div>
+<p>A designação de «Casa do Poço» advém-lhe do poço que possuia junto à rua.</p>
+</div>
+<div>
+<p>Foi construída depois de 1727, em pertenças do n.º 5,
+                    da rua Pequena.</p>
+</div>
+<div>
+<p>Correspondem ao n.º 7 da travessa que vai da Rua de Santa
+                    Maria ou do Poço para a do Forno, para onde têm a frontaria e
+                    serventia principais. O n.º 13 foi unido, num só prazo, ao n.º 14,
+                    depois do ano de 1561. Posteriormente, no ano de 1672, foram unidas
+                    ao n? 15. Em 1681, foram feitas escrituras de sub-emprazamento das
+                    casas 13 e 14, à face do n.º 15.</p>
+</div>
+<div>
+<p>Corresponde ao n.º 6 da travessa que vai da Rua de Santa
+                    Maria ou do Poço para a do Forno, para onde têm a frontaria e
+                    serventia principais.</p>
+</div>
+<div>
+<p>O emprazamento é de 1744. Foi construída em pertenças do
+                    n.º 16, depois do ano de 1524. Confronta, do sul, com o Hospital de 
+                    Santiago ou das Velhas, do morgado de Real.</p>
+</div>
+<div>
+<p>Confronta, do sul, com casa foreira à comenda de Riofrio.</p>
+</div>
+<div>
+<p>A casa é foreira à obra da Sé.
+                    São enfiteutas, os herdeiros de Manuel Nogueira, sapateiro,
+                    que pagam de foro 120 reis.</p>
+</div>
+<div>
+<p>O enfiteuta herdara este prazo de seu tio,
+                    o Padre João Correia, vigário da Igreja de Santiago da Cividade.</p>
+</div>
+<div>
+<p>A este prazo pertencem as casas n.ºs 1 e 2 da travessa que vai da Rua do Poço para a de D. Gualdim.
+                    Confronta, do norte, com a dita travessa. No ano de 1609 o n.º 2 da mesma travessa foi unido, num só prazo, ao n.º 21.
+                </p>
+</div>
+<div>
+<p>O n.º 23 foi construído em pertenças do n° 22, no ano de 1543.</p>
+</div>
+<div>
+<p>O n.º 23 foi construído em pertenças do n° 22, no ano de 1543.</p>
+</div>
+<div>
+<p>O enfiteuta foi sobrinho e herdeiro do Cónego Bento da Silva Teles.</p>
+</div>
+<div>
+<p>Estiveram unidas, num só prazo, entre os anos de 1554 e 1670.</p>
+</div>
+<div>
+<p>Estiveram unidas, num só prazo, entre os anos de 1554 e 1670.</p>
+</div>
+<div>
+<p>Estão unidas, num só prazo, desde o ano de 1574.
+                    Em 1631 foi-lhe incorporada um casa, dízima a Deus, que o
+                    Mestre Escola, Cristóvão de Matos, doara ao Cabido. A casa n.º 30
+                    confronta, do norte, com casa foreira à capela de S. Bento, a qual
+                    fica situada debaixo do coro da Sé.</p>
+</div>
+<div>
+<p>Corresponde ao n.º 1 da Praça do Pão, para onde tem a frontaria e serventia principais.</p>
+</div>
+<h3>Casas:</h3>
 <div>
 <p>Número: 1</p>
-<p>Descrição: Corresponde ao n.º 17 da </p>
+<p>Descrição: Corresponde ao n.º 17 da Rua das Oussias, para onde tem a frontaria
+                    e serventia principais.</p>
+
+
+
 </div>
 <div>
 <p>Número: 2</p>
@@ -30,91 +129,160 @@
 <p>Enfiteuta: António Ferreira, moleiro</p>
 <p>Foro: 125 reis e galinha</p>
 <p>Descrição: Estas casas, juntamente com o n.º 5
-                    foram construídas depois de </p>
+                    foram construídas depois de 1543, em pertenças
+                    do n.º3.</p>
+
+
+
 </div>
 <div>
 <p>Número: 5 e 6</p>
-<p>Descrição: Aqui vivem os vigário da </p>
+<p>Descrição: Aqui vivem os vigário da Sé.
+                    O Cabido doou o n.º 5 (depois de 1703), e o n.º 6
+                    (depois de 1631), aos vigários da Sé, para sua
+                    residência. A casa n.º 5 foi construída em pertenças
+                    do n.º 4, a partir do referido ano de 1703.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 7</p>
 <p>Enfiteuta: Dr. Francisco Gomes do Couto</p>
 <p>Foro: 180 reis e 4 galinhas</p>
-<p>Descrição: Foi construída depois de </p>
+<p>Descrição: Foi construída depois de 1559, em pertenças que
+                    foram do n.º 6.</p>
+
+
+
 </div>
 <div>
 <p>Número: 8 e 9</p>
 <p>Enfiteuta: Lic. Paulo de Sousa de Magalhães, de Barcelos</p>
 <p>Foro: 1270 reis, 6 galinhas e 2 capões</p>
 <p>Descrição: O n.º 8 foi unida, num só prazo, ao n.º 9.</p>
+
+
+
 </div>
 <div>
 <p>Número: 10</p>
 <p>Enfiteuta: Francisco Pereira, alfaiate e sua mulher, Francisca de Campos</p>
 <p>Foro: 250 reis e 2 capões</p>
-<p>Descrição: O emprazamento foi feito no ano de </p>
+<p>Descrição: O emprazamento foi feito no ano de 1727.</p>
+
+
+
 </div>
 <div>
 <p>Número: 11</p>
 <p>Enfiteuta: Manuel Francisco, tratante, e sua mulher, Teresa Antunes</p>
 <p>Foro: 210 reis e 4 galinhas</p>
 <p>Descrição: A designação de «Casa do Poço» advém-lhe do poço que possuia junto à rua.</p>
+
+
+
 </div>
 <div>
 <p>Número: 12</p>
 <p>Enfiteuta: Padre Diogo da Rocha</p>
 <p>Foro: 110 reis e 1 capão</p>
-<p>Descrição: Foi construída depois de </p>
+<p>Descrição: Foi construída depois de 1727, em pertenças do n.º 5,
+                    da rua Pequena.</p>
+
+
+
 </div>
 <div>
 <p>Número: 13, 14 e 15</p>
-<p>Descrição: Correspondem ao n.º 7 da travessa que vai da </p>
+<p>Descrição: Correspondem ao n.º 7 da travessa que vai da Rua de Santa
+                    Maria ou do Poço para a do Forno, para onde têm a frontaria e
+                    serventia principais. O n.º 13 foi unido, num só prazo, ao n.º 14,
+                    depois do ano de 1561. Posteriormente, no ano de 1672, foram unidas
+                    ao n? 15. Em 1681, foram feitas escrituras de sub-emprazamento das
+                    casas 13 e 14, à face do n.º 15.</p>
+
+
+
 </div>
 <div>
 <p>Número: 16</p>
-<p>Descrição: Corresponde ao n.º 6 da travessa que vai da </p>
+<p>Descrição: Corresponde ao n.º 6 da travessa que vai da Rua de Santa
+                    Maria ou do Poço para a do Forno, para onde têm a frontaria e
+                    serventia principais.</p>
+
+
+
 </div>
 <div>
 <p>Número: 17</p>
 <p>Enfiteuta: D. Bernarda Inácia Pereira Pimentel, viúva de José de Coimbra e Andrade, da cidade de Braga</p>
 <p>Foro: 80 reis e 1 galinha</p>
-<p>Descrição: O emprazamento é de </p>
+<p>Descrição: O emprazamento é de 1744. Foi construída em pertenças do
+                    n.º 16, depois do ano de 1524. Confronta, do sul, com o Hospital de 
+                    Santiago ou das Velhas, do morgado de Real.</p>
+
+
+
 </div>
 <div>
 <p>Número: 18</p>
 <p>Enfiteuta: Os herdeiros de Manuel Machado, alfaiate</p>
 <p>Foro: 170 reis e 1 galinha</p>
-<p>Descrição: Confronta, do sul, com casa foreira à comenda de </p>
+<p>Descrição: Confronta, do sul, com casa foreira à comenda de Riofrio.</p>
+
+
+
 </div>
 <div>
 <p>Número: 19</p>
-<p>Descrição: A casa é foreira à obra da </p>
+<p>Descrição: A casa é foreira à obra da Sé.
+                    São enfiteutas, os herdeiros de Manuel Nogueira, sapateiro,
+                    que pagam de foro 120 reis.</p>
+
+
+
 </div>
 <div>
 <p>Número: 20</p>
 <p>Enfiteuta: Padre Custódio Correira, vigário de Santiago</p>
 <p>Foro: 680 reis e 2 galinhas</p>
 <p>Descrição: O enfiteuta herdara este prazo de seu tio,
-                    o </p>
+                    o Padre João Correia, vigário da Igreja de Santiago da Cividade.</p>
+
+
+
 </div>
 <div>
 <p>Número: 21</p>
 <p>Enfiteuta: Os herdeiros de Francisco de Almeida Cabral,
                     meirinho do Secular da cidade de Braga</p>
 <p>Foro: 700 reis e 4 galinhas </p>
-<p>Descrição: A este prazo pertencem as casas n.ºs 1 e 2 da travessa que vai da </p>
+<p>Descrição: A este prazo pertencem as casas n.ºs 1 e 2 da travessa que vai da Rua do Poço para a de D. Gualdim.
+                    Confronta, do norte, com a dita travessa. No ano de 1609 o n.º 2 da mesma travessa foi unido, num só prazo, ao n.º 21.
+                </p>
+
+
+
 </div>
 <div>
 <p>Número: 22</p>
 <p>Enfiteuta: Dr. Francisco Gomes do Couto</p>
 <p>Foro: 340 reis e 2 galinhas</p>
-<p>Descrição: O n.º 23 foi construído em pertenças do n° 22, no ano de </p>
+<p>Descrição: O n.º 23 foi construído em pertenças do n° 22, no ano de 1543.</p>
+
+
+
 </div>
 <div>
 <p>Número: 23</p>
 <p>Enfiteuta: Dr. Francisco Gomes do Couto</p>
 <p>Foro: 600 reis e 4 galinhas</p>
-<p>Descrição: O n.º 23 foi construído em pertenças do n° 22, no ano de </p>
+<p>Descrição: O n.º 23 foi construído em pertenças do n° 22, no ano de 1543.</p>
+
+
+
 </div>
 <div>
 <p>Número: 24</p>
@@ -125,19 +293,28 @@
 <p>Número: 25</p>
 <p>Enfiteuta: Cónego Francisco da Silva Teles</p>
 <p>Foro: 900 reis e 4 galinhas</p>
-<p>Descrição: O enfiteuta foi sobrinho e herdeiro do </p>
+<p>Descrição: O enfiteuta foi sobrinho e herdeiro do Cónego Bento da Silva Teles.</p>
+
+
+
 </div>
 <div>
 <p>Número: 26</p>
 <p>Enfiteuta: Dr. Francisco Gomes do Couto</p>
 <p>Foro: 90 reis e 1 galinha</p>
-<p>Descrição: Estiveram unidas, num só prazo, entre os anos de </p>
+<p>Descrição: Estiveram unidas, num só prazo, entre os anos de 1554 e 1670.</p>
+
+
+
 </div>
 <div>
 <p>Número: 27</p>
 <p>Enfiteuta: Dr. Francisco Gomes do Couto</p>
 <p>Foro: 140 reis e 1 galinha</p>
-<p>Descrição: Estiveram unidas, num só prazo, entre os anos de </p>
+<p>Descrição: Estiveram unidas, num só prazo, entre os anos de 1554 e 1670.</p>
+
+
+
 </div>
 <div>
 <p>Número: 28</p>
@@ -148,11 +325,21 @@
 <p>Número: 29 e 30</p>
 <p>Enfiteuta: Tomaz de Araújo e Brito, Abade</p>
 <p>Foro: 600 reis e 6 galinhas</p>
-<p>Descrição: Estão unidas, num só prazo, desde o ano de </p>
+<p>Descrição: Estão unidas, num só prazo, desde o ano de 1574.
+                    Em 1631 foi-lhe incorporada um casa, dízima a Deus, que o
+                    Mestre Escola, Cristóvão de Matos, doara ao Cabido. A casa n.º 30
+                    confronta, do norte, com casa foreira à capela de S. Bento, a qual
+                    fica situada debaixo do coro da Sé.</p>
+
+
+
 </div>
 <div>
 <p>Número: 31</p>
-<p>Descrição: Corresponde ao n.º 1 da </p>
+<p>Descrição: Corresponde ao n.º 1 da Praça do Pão, para onde tem a frontaria e serventia principais.</p>
+
+
+
 </div>
 </body>
 </html>
